Corrected new HP urls and minor cleanups

--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -78,6 +78,7 @@ addressEditor.title=Rango-IP
 
 apps.dir.firefox=Firefox
 apps.dir.outlook=Outlook
+##apps.dir.sunbird=Sunbird
 apps.dir.thunderbird=Thunderbird
 
 buypro.description=Moderniza a PowerFolder Pro now
@@ -101,10 +102,6 @@ chatpanel.member_left_folder_at_time={0} abandon\u00f3 la carpeta a las {1}
 clearcompleteddownloads.description=Borrar lista de descargas completas recientes(Alt-3)
 clearcompleteddownloads.key=c
 clearcompleteddownloads.name=Limpiar
-
-clearrecentdownloads.description=Despejar lista de problemas recientes
-clearrecentdownloads.key=c
-clearrecentdownloads.name=Despejar
 
 connect.description=Conexi\u00f3n manual a un usuario de Powerfolder
 connect.dialog.text=Por favor teclee el nombre de servidor o la IP del usuario al que se quiere conectar.\n\nPowerFolder se conecta autom\u00e1ticamente a la red despu\u00e9s de un corto per\u00edodo de tiempo,\nuse esta opci\u00f3n si quiere conectarse manualmente a un usuario.\n
@@ -295,6 +292,19 @@ folder.members.synchronisation_panel.folder_size=Tama\u00f1o de la carpeta
 folder.members.synchronisation_panel.local_size=Tama\u00f1o local
 folder.members.synchronisation_panel.title=Estado de sincronizaci\u00f3n del miembro
 
+folder_create.progress.text=Creaando PowerFolder '{0}'
+
+##folder_leave.button.key=L
+##folder_leave.button.name=Leave
+folder_leave.description=Abandonar este PowerFolder
+folder_leave.dialog.delete=Borrar meta-data
+##folder_leave.dialog.preview=Convert to preview
+folder_leave.dialog.sync_warning=La carpeta se esta sincronizando\!
+folder_leave.dialog.text=Abandonar PowerFolder {0}?
+folder_leave.dialog.title=Abandonar PowerFolder {0}?
+folder_leave.key=A
+folder_leave.name=Abandonar carpeta
+
 foldercreate.description=Crea una carpeta PowerFolder nueva
 foldercreate.dialog.backupbyonlinestorage=Respaldo con Almacenamiento en linea
 foldercreate.dialog.backuperror.text=No es posible configurar el almac\u00e9n en line para respaldar el PowerFolder
@@ -314,7 +324,6 @@ foldercreate.key=s
 foldercreate.name=Compartir una carpeta
 foldercreate.nameempty.text=El nombre de este PowerFolder no puede quedarse en blanco
 foldercreate.nameempty.title=Nombre obligatorio
-folder_create.progress.text=Creaando PowerFolder '{0}'
 foldercreate.success=PowerFolder {0} configurado con \u00e9xito, copia local en '{1}'
 
 folderexception.dialog.text=No es posible incorporarse al PowerFolder '{0}'.\nRaz\u00fan\: {1}
@@ -325,7 +334,7 @@ folderinfo.syncprofile=Perfil de sincronizaci\u00f3n
 folderinfo.totalsync=Total sincronizado
 
 folderjoin.description=Incluirse en este PowerFolder
-folderjoin.dialog.title= Incluirse en el PowerFolder {0}?
+folderjoin.dialog.title=Incluirse en el PowerFolder {0}?
 folderjoin.inivtation=Recibida invitaci\u00f3n
 folderjoin.inivtationfrom=Recibida invitaci\u00f3n de {0}
 folderjoin.invitationtext=Mensaje
@@ -340,14 +349,6 @@ folderjoin.preview_only=solo previsualizar
 folderjoin.secret=Secreta
 folderjoin.warning.notempty.text=El directorio para la copia local de la carpeta '{0}' no est\u00e1 vac\u00edo.\nTodos los archivos all\u00ed contenidos se enviar\u00e1n a los miembros.\n\u00bfEst\u00e1 seguro de ubicar la copia local en\n'{1}' ?
 folderjoin.warning.notempty.title=La ubicaci\u00f3n local no est\u00e1 vac\u00eda
-
-folder_leave.description=Abandonar este PowerFolder
-folder_leave.dialog.delete=Borrar meta-data
-folder_leave.dialog.sync_warning=La carpeta se esta sincronizando\!
-folder_leave.dialog.text=Abandonar PowerFolder {0}?
-folder_leave.dialog.title=Abandonar PowerFolder {0}?
-folder_leave.key=A
-folder_leave.name=Abandonar carpeta
 
 foldermove.progress.text=Moviendo carpeta '{0}'
 foldermove.progress.title=Carpeta en movimiento
@@ -409,7 +410,7 @@ folderrepository.continue_previewing=Continuar previsualilzaci\u00fan
 folderrepository.join_folder=Unirse a la Carpeta
 folderrepository.leave_folder=Abandonar Carpeta
 folderrepository.please_recreate=Favor de recrear.
-folderrepository.preview_folder.text=Carpeta {0} es una carpeta de previsualizaci\u00fan.\n\n\u00bf\Que desea hacer?
+folderrepository.preview_folder.text=Carpeta {0} es una carpeta de previsualizaci\u00fan.\n\n\u00bfQue desea hacer?
 folderrepository.preview_folder.title=Carpeta de previsualizaci\u00fan
 folderrepository.warnonclose.text=Estas carpetas no se sincronizaron a\u00fan\:\n\n\n\n{0}\n\n\nContinuar con Salir?
 folderrepository.warnonclose.title=Continuar con Salir?
@@ -469,11 +470,14 @@ general.help=ayuda
 general.hide=ocultar
 general.hours=Hora(s)
 general.inet=i-net
+##general.invitor=Invitor
+##general.lan_only=LAN only
 general.local_copy_at=Copia local en
 general.localcopyplace=Elija un lugar para la copia local
 general.localized_date_format=MMMM dd. yyyy (M\:M\u00e9s d\:d\u00eda y\:a\u00f1o)
 general.localnet=red local
 general.member=Miembro
+##general.message=Message
 general.minutes=Minuto(s)
 general.monday=Lunes
 general.neverAskAgain=Jam\u00e1s volver a preguntar
@@ -485,6 +489,7 @@ general.ok.key=O
 general.overwrite=Sobreescribir
 general.overwrite_all=Sobreescribir todos
 general.powerfolder=PowerFolder
+##general.preview_folder=Preview folder
 general.recyclebin=Papelera de Reciclaje
 general.reject=Rechazar
 general.saturday=S\u00e1bado
@@ -700,7 +705,7 @@ preferences.dialog.dyndnsPassword=Contrase\u00f1a
 preferences.dialog.dyndnsSettingsTabbedPane=Opciones de DynDns
 preferences.dialog.dyndnsUpdateButton=Forzar Actualizaci\u00f3n
 preferences.dialog.dyndnsUpdateError=El servicio DynDns devolvi\u00f3 un error\:
-preferences.dialog.dyndnsUpdateText=El dato {0} no puede estar vac\u00edo!
+preferences.dialog.dyndnsUpdateText=El dato {0} no puede estar vac\u00edo\!
 preferences.dialog.dyndnsUpdateTitle=Actualizador DynDns
 preferences.dialog.dyndnsUpdateUnknowError=El servicio DynDns devolvi\u00f3 una advertencia desconocida.
 preferences.dialog.dyndnsUpdateWarning=El servicio DynDns devolvi\u00f3 una advertencia\:
@@ -757,6 +762,7 @@ preferences.dialog.statusWaitDynDns=Please wait, \u00a1Se est\u00e1 validando la
 preferences.dialog.title=Preferencias
 preferences.dialog.titleProcessing=procesando...
 preferences.dialog.use.relayed.connections=Use conecciones de relevo para mejorar la conectividad
+##preferences.dialog.use.udt.connections=Use NAT traversal to improve connectivity
 preferences.dialog.use_pf_icon=Usar los \u00edconos de PowerFolder en Windows
 preferences.dialog.usedeltaonlan=User syncronizaci\u00f3n delta en el LAN
 preferences.dialog.usedeltaonlan.tooltip=Activar solo en redes letas (esto puede afectar la carga en su CPU)
@@ -770,6 +776,13 @@ preferences.dialog.xbehavior.exit=Salir del programa
 preferences.dialog.xbehavior.minimize=Minimizar en la Bandeja del Sistema
 preferences.key=p
 preferences.name=Preferencias
+
+##preview_folder_remove.description=Remove this PowerFolder preview
+##preview_folder_remove.dialog.delete=Delete meta-data
+##preview_folder_remove.dialog.text=Remove PowerFolder {0}?
+##preview_folder_remove.dialog.title=Remove PowerFolder {0}?
+##preview_folder_remove.key=R
+##preview_folder_remove.name=Remove Folder
 
 previewfiles.description=Previsualizar los archivos de esta carpeta
 previewfiles.key=P
@@ -820,6 +833,7 @@ quickinfo.folder.downloads_recently_completed={0} Descargas completadas reciente
 quickinfo.folder.is_in_sync=La Carpeta esta en sincron\u00eda
 quickinfo.folder.is_synchronizing=La Carpeta se esta sincronizando...
 quickinfo.folder.number_of_files_and_size={0} Archivo(s), {1}
+##quickinfo.folder.preview=Preview - No synchronization
 quickinfo.folder.status_of_folder=Estado de {0}
 quickinfo.friends.online={0} de {1} amigo(s) en-l\u00ednea
 quickinfo.friends.title=Encontrar Amigos
@@ -829,6 +843,7 @@ quickinfo.myfolders.insyncall=Todas las carpetas est\u00e1n sincronizadas
 quickinfo.myfolders.syncing=Sincronizando {0}
 quickinfo.myfolders.title=Estado de mis PowerFolders
 quickinfo.previewfolders.folders={0} en {1} Carpeta(s)
+##quickinfo.previewfolders.nosync=Preview folders are not synchronized
 quickinfo.previewfolders.title=Estado de carpetas de previsualizaci\u00f3n
 quickinfo.recylcebin.files={0} archivo(s) en la Papelera de Reciclaje
 quickinfo.recylcebin.title=Papelera de Reciclaje
@@ -861,6 +876,10 @@ recyclebin.confirmation.overwrite.on.restore.size.bytes=Tama\u00f1o {0}
 recyclebin.confirmation.overwrite.on.restore.title=Restaurar archivo, sobreescribir?
 recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=Con archivo de la Papelera de Reciclaje?
 
+##remove_all_preview_folders.description=Removes all preview PowerFolders
+##remove_all_preview_folders.key=A
+##remove_all_preview_folders.name=Remove All Folders
+
 remove_from_recycle_bin.description=Borrar archivo de la Papelera de Reciclaje de PowerFolder
 remove_from_recycle_bin.key=D
 remove_from_recycle_bin.name=Borrar archivo
@@ -872,6 +891,10 @@ remove_pattern.dont=No remover
 remove_pattern.prompt=Patr\u00f3n '{0}' ser\u00e1 removido.
 remove_pattern.remove=Remover
 remove_pattern.title=Remover patr\u00f3n de exclusi\u00f3n
+
+##remove_previews_action.remove=Remove
+##remove_previews_action.text=Do you want to remove all preview folders?
+##remove_previews_action.title=Remove all preview folders
 
 removefriend.description=Elimina el usuario de la lista de amigos
 removefriend.key=r
@@ -911,6 +934,10 @@ searchfriends.description=Buscar un amigo
 searchfriends.key=S
 searchfriends.name=Buscar
 
+send_invitation.example_email_address=email@dominio.com
+send_invitation.multi_users=Multiple selecci\u00f3n de usuarios
+send_invitation.no_users=Ning\u00fan usuario ha sido seleccionado
+
 sendinvitation.allFolders.text=No fue posibible invitar a {0} a ninguna carpeta\nEste usuario ya es miembro de todas las carpetas
 sendinvitation.allFolders.title={0} ya es miembro en todas las carpetas
 sendinvitation.ask_emailaddres.message=Enviar direcci\u00f3n de correo electr\u00f3nico para mandar una invitaci\u00f3n
@@ -918,13 +945,10 @@ sendinvitation.ask_emailaddres.title=Direcci\u00f3n de Email
 sendinvitation.body=Saludos {0},<br><br>{1} te invita a PowerFolder '{2}'<br>Esta invitaci\u00f3n te permitir\u00e1 accessar una carpeta privada servida por  {1}.<br><br>1) Para ser accessada necesitas primero descarga e instalar el <br>software gratuito, PowerFolder. Lo encontraras en\:<br>http\://www.powerfolder.com.<br><br>2) Despues de haberlo instalado hazle un click-doble a la invitaci\u00f3n<br>El archivo atado a este correo<br><br>Para mas informaci\u00f3n o asistancia en la instalaci\u00f3n o uso de  PowerFolder favor de<br>visitar nuestra documentaci\u00f3n en  http\://docs.powerfolder.com<br><br>Thank You,<br>El Equipo de desarrollo de PowerFolder<br>PowerFolder, Programa para Compartir Carpetas Profesional<br>.m
 sendinvitation.description=Invita un usuario a una carpeta
 sendinvitation.email=Por email...
-send_invitation.example_email_address=email@dominio.com
 sendinvitation.folder.text=Enviar invitaci\u00f3n a
 sendinvitation.folder.title=Enviar invitaci\u00f3n
 sendinvitation.key=i
-send_invitation.multi_users=Multiple selecci\u00f3n de usuarios
 sendinvitation.name=Enviar invitaci\u00f3n
-send_invitation.no_users=Ning\u00fan usuario ha sido seleccionado
 sendinvitation.placetostore=Elija un lugar donde guardar la invitaci\u00f3n
 sendinvitation.subject=Invitaci\u00f3n al PowerFolder '{0}'
 sendinvitation.toclipboard=Al portapapeles...
@@ -1055,7 +1079,7 @@ user.dir.videos=Videos
 
 winutils.shortcut.description=Este atajo fue puesto por PowerFolder
 
-wizard.backup_panel.folder_backup_success=Has creado una carpeta de respaldo!\n
+wizard.backup_panel.folder_backup_success=Has creado una carpeta de respaldo\!\n
 wizard.backup_panel.pcsjoin=Otras computadoras pueden ahora unirse a esta carpeta
 wizard.backup_panel.select=Faor de seleccionar el directorio que necesita ser respaldado
 wizard.basicsetup.enternick=Por favor ingrese su apodo
@@ -1065,6 +1089,7 @@ wizard.basicsetup.private=LAN e Internet
 wizard.basicsetup.title=Configuraci\u00f3n B\u00e1sica
 wizard.basicsetup.upload.text=Velocidad de conneci\u00f3n ilimitada permitir\u00e1 un n\u00famero ilimitado de conecciones.
 wizard.basicsetup.upload.title=Velocidad de Conecci\u00f3n ilimitada
+##wizard.choose_location.select=Please select the directory
 wizard.choosedisklocation.select=Seleccione el directorio
 wizard.choosedisklocation.title=Ubicaci\u00f3n en el disco
 wizard.control.back=< Atr\u00e1s
@@ -1077,8 +1102,13 @@ wizard.control.help=Ayuda
 wizard.control.help.description=Mostrar ayuda en linea (Alt-8)
 wizard.control.next=Siguiente >
 wizard.control.next.description=Ir al siguiente paso del Asistente
+##wizard.create_folder.failed=Failed to create PowerFolder.
+##wizard.create_folder.title=Creating PowerFolder
+##wizard.create_folder.working=Creating PowerFolder, please wait.
 wizard.description=Abrir Asistente
 wizard.filesharing.sharedsuccess=\u00a1Ha compartido con \u00e9xito una nueva carpeta\!\nAhora otros usuarios pueden unirse
+##wizard.folder_invitation.intro=You have received an invitation from {0}
+##wizard.folder_invitation.title=Folder Invitation
 wizard.host_panel.folder_host_success=Has configurado con \u00e9xito  una carpeta en este host\!\n
 wizard.host_panel.pcsjoin=Ahora otras computadoras pueden ahora unirse a esta carpeta
 wizard.host_panel.select=Favor de elegir el directorio pare este host
@@ -1100,14 +1130,16 @@ wizard.send_invitations.invitation_text=Enter a message for the receiver
 wizard.send_invitations.invitation_text_sample=Texto ejemplo de invitaci\u00f3n
 wizard.send_invitations.join=Archivos de invitaci\u00f3n son necesarios para unirse a un folder.
 wizard.send_invitations.never_untrusted=Nunca entrege archivos invitaci\u00f3n a personas en los que no conf\u00eda
-wizard.sendinvitations.offline=No conectado
 wizard.send_invitations.over_powerfolder=Via PowerFolder ahora
 wizard.send_invitations.save_to_file=Guardar como archivo
 wizard.send_invitations.send_by_mail=Enviar por mail
 wizard.send_invitations.send_invitation=Enviar invitaci\u00f3n
+wizard.send_invitations.title=Guardar invitaci\u00f3n
+wizard.sendinvitations.offline=No conectado
 wizard.sendinvitations.sendsuccess=Invitaci\u00f3n enviada
 wizard.sendinvitations.sendsuccessinfo=La invitaci\u00f3n se envi\u00f3 con exito.
-wizard.send_invitations.title=Guardar invitaci\u00f3n
+##wizard.setup_folder.sendinvitation=Send invitations afterwards
+##wizard.setup_folder.title=Create Folder
 wizard.setupdns.dyndnshomepage=P\u00e1gina web Dyndns
 wizard.setupdns.enterdns=Teclee su dns (din\u00e1mica)
 wizard.setupdns.improvesread=Esto mejora su localizaci\u00f3n en la red. Aunque no es necesario
