--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -78,6 +78,7 @@ addressEditor.title=IP-Reeks
 
 ##apps.dir.firefox=Firefox
 ##apps.dir.outlook=Outlook
+##apps.dir.sunbird=Sunbird
 ##apps.dir.thunderbird=Thunderbird
 
 buypro.description=Upgrade nu naar PowerFolder Pro
@@ -101,10 +102,6 @@ chatpanel.member_left_folder_at_time={0} verliet de Folder om {1}
 ##clearcompleteddownloads.description=Clears the list of the recently completed downloads (Alt-3)
 clearcompleteddownloads.key=R
 clearcompleteddownloads.name=Ruim op
-
-##clearrecentdownloads.description=Clears the list of the recent problems
-##clearrecentdownloads.key=c
-##clearrecentdownloads.name=Cleanup
 
 connect.description=Maak verbinding met een Powerfolder gebruiker
 connect.dialog.text=Vul de hostname of ip adres in van de gebruiker waarmee u wilt verbinden.\n\nPowerFolder zal automatisch met het netwerk verbinden na een korte tijd,\ngebruik deze optie om met een gebruiker te verbinden.\n 
@@ -295,12 +292,26 @@ folder.members.synchronisation_panel.folder_size=Folder grootte
 folder.members.synchronisation_panel.local_size=Lokale grootte   
 folder.members.synchronisation_panel.title=Lid Sync Status
 
+##folder_create.progress.text=Creating PowerFolder '{0}'
+
+##folder_leave.button.key=L
+##folder_leave.button.name=Leave
+##folder_leave.description=Leave this PowerFolder
+##folder_leave.dialog.delete=Delete meta-data
+##folder_leave.dialog.preview=Convert to preview
+folder_leave.dialog.sync_warning=De folder is momenteel aan het synchronizeren\!
+##folder_leave.dialog.text=Leave PowerFolder {0}?
+##folder_leave.dialog.title=Leave PowerFolder {0}?
+folder_leave.key=V
+folder_leave.name=Verlaat folder
+
 ##foldercreate.description=Creates a new PowerFolder
 foldercreate.dialog.backupbyonlinestorage=Backup door Online Opslag
 ##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
 ##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
 ##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
+##foldercreate.dialog.sendinvitation=Send invitations afterwards
 ##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
 ##foldercreate.dialog.title=Create new PowerFolder
 ##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
@@ -313,7 +324,6 @@ foldercreate.key=D
 foldercreate.name=Deel folder
 ##foldercreate.nameempty.text=Name of the PowerFolder should not be empty
 ##foldercreate.nameempty.title=Name required
-##foldercreate.progress.text=Creating PowerFolder '{0}'
 ##foldercreate.success=PowerFolder {0} successfully setup, local copy at '{1}'
 
 ##folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
@@ -339,14 +349,6 @@ folderjoin.name=Wordt Lid
 folderjoin.secret=Geheim
 folderjoin.warning.notempty.text=De map voor de lokale kopie van de folder '{0}' is niet leeg.\nAlle bestanden aanwezig daar kunnen worden verzonden aan deelnemers in de folder.\nWeet u zeker dat de lokale kopie van de folder hier geplaatst moet worden\n'{1}' ?
 folderjoin.warning.notempty.title=Lokale basis map niet leeg
-
-##folder_leave.description=Leave this PowerFolder
-##folder_leave.dialog.delete=Delete meta-data
-folder_leave.dialog.sync_warning=De folder is momenteel aan het synchronizeren\!
-##folder_leave.dialog.text=Leave PowerFolder {0}?
-##folder_leave.dialog.title=Leave PowerFolder {0}?
-folder_leave.key=V
-folder_leave.name=Verlaat folder
 
 foldermove.progress.text=Verplaatsen van folder '{0}'
 foldermove.progress.title=Verplaats folder
@@ -468,11 +470,14 @@ general.help=help
 general.hide=verberg
 ##general.hours=Hour(s)
 general.inet=i-net
+##general.invitor=Invitor
+##general.lan_only=LAN only
 general.local_copy_at=Lokale kopie
 general.localcopyplace=Kies een plek voor lokale kopie
 general.localized_date_format=dd MMMM yyyy
 general.localnet=lokaal
 general.member=Lid
+##general.message=Message
 ##general.minutes=Minute(s)
 ##general.monday=Monday
 ##general.neverAskAgain=Never ask this again
@@ -484,6 +489,7 @@ general.ok.key=O
 general.overwrite=Overschrijven
 general.overwrite_all=Overschrijf alle
 general.powerfolder=PowerFolder
+##general.preview_folder=Preview folder
 general.recyclebin=Prullenbak
 ##general.reject=Reject
 ##general.saturday=Saturday
@@ -501,7 +507,7 @@ general.uploads=Uploads
 general.user=User
 general.webservice=Online Opslag
 ##general.wednesday=Wednesday
-##general.whatisthis=What is this?
+##general.what_is_this=What is this?
 general.yesterday=vandaag
 
 hideoffline.description=De niet verbonden gebruikers worden verborgen 
@@ -756,6 +762,7 @@ preferences.dialog.statusWaitDynDns=S.V.P. even wachten, DynDns {0} wordt gecont
 preferences.dialog.title=Instellingen
 preferences.dialog.titleProcessing=verwerken...
 ##preferences.dialog.use.relayed.connections=Use relayed connections to improve connectivity
+##preferences.dialog.use.udt.connections=Use NAT traversal to improve connectivity
 ##preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 ##preferences.dialog.usedeltaonlan=Use delta sync on LAN
 ##preferences.dialog.usedeltaonlan.tooltip=Enable if on a slow network (this may effect your CPU load)
@@ -769,6 +776,13 @@ preferences.dialog.xbehavior.exit=Programma afsluiten
 preferences.dialog.xbehavior.minimize=Minimalizeer naar system tray
 preferences.key=I
 preferences.name=Instellingen
+
+##preview_folder_remove.description=Remove this PowerFolder preview
+##preview_folder_remove.dialog.delete=Delete meta-data
+##preview_folder_remove.dialog.text=Remove PowerFolder {0}?
+##preview_folder_remove.dialog.title=Remove PowerFolder {0}?
+##preview_folder_remove.key=R
+##preview_folder_remove.name=Remove Folder
 
 previewfiles.description=Preview bestanden in deze Folder
 previewfiles.key=P
@@ -819,6 +833,7 @@ quickinfo.download.title=Download status
 quickinfo.folder.is_in_sync=Folder is gesynchronizeerd
 quickinfo.folder.is_synchronizing=Folder is aan het synchronizeren...
 quickinfo.folder.number_of_files_and_size={0} Bestand(en), {1}
+##quickinfo.folder.preview=Preview - No synchronization
 quickinfo.folder.status_of_folder=Status van {0}
 quickinfo.friends.online={0} van {1} vrienden zijn online
 quickinfo.friends.title=Zoek vrienden
@@ -828,6 +843,7 @@ quickinfo.myfolders.insyncall=Alle Folders zijn gesynchroniseerd
 quickinfo.myfolders.syncing=Synchroniserend {0}
 ##quickinfo.myfolders.title=Status of my PowerFolders
 ##quickinfo.previewfolders.folders={0} in {1} folder(s)
+##quickinfo.previewfolders.nosync=Preview folders are not synchronized
 ##quickinfo.previewfolders.title=Status of Preview Folders
 quickinfo.recylcebin.files={0} bestand(en) in Prullenbak
 quickinfo.recylcebin.title=Prullenbak
@@ -860,6 +876,10 @@ recyclebin.confirmation.overwrite.on.restore.size.bytes=Grootte {0}
 recyclebin.confirmation.overwrite.on.restore.title=Herstel bestand, overschrijf
 recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=Met bestand van de prullenbak?
 
+##remove_all_preview_folders.description=Removes all preview PowerFolders
+##remove_all_preview_folders.key=A
+##remove_all_preview_folders.name=Remove All Folders
+
 remove_from_recycle_bin.description=Verwijder bestand van de PowerFolder prullenbak
 remove_from_recycle_bin.key=V
 remove_from_recycle_bin.name=Verwijder bestand
@@ -871,6 +891,10 @@ remove_from_recycle_bin_confimation.title=Verwijder bestanden?
 ##remove_pattern.prompt=Pattern '{0}' will be removed.
 ##remove_pattern.remove=Remove
 ##remove_pattern.title=Remove ignore pattern
+
+##remove_previews_action.remove=Remove
+##remove_previews_action.text=Do you want to remove all preview folders?
+##remove_previews_action.title=Remove all preview folders
 
 removefriend.description=verwijder de gebruiker uit de vriendenlijst
 removefriend.key=r
@@ -910,6 +934,10 @@ searchfriends.description=Zoek een gebruiker
 searchfriends.key=Z
 searchfriends.name=Zoek
 
+send_invitation.example_email_address=e-mail@domein.nl
+##send_invitation.multi_users=Multiple users selected
+##send_invitation.no_users=No users selected
+
 ##sendinvitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
 ##sendinvitation.allFolders.title={0} already on all folders
 sendinvitation.ask_emailaddres.message=E-mail adres om Invitatie naar te versturen
@@ -917,13 +945,10 @@ sendinvitation.ask_emailaddres.title=E-mail adres
 sendinvitation.body=Hallo {0},<br><br>{1} nodigt u uit om lid te worden van de PowerFolder '{2}'<br>Met deze invitatie krijgt u toegang tot de bestanden in die folder.<br><br>Gebruiksaanwijzing\:<br>1) Om de toegang tot de bestanden te krijgen moet u het gratis programma <b>PowerFolder</b> downloaden en installeren van <b><a href\="http\://www.powerfolder.com">http\://www.powerfolder.com</a></b>.<br><br>2) Na installatie van <b>PowerFolder</b> dubbel klik op het bijgevoegde Invitatie bestand.<br><br>Meer Documentatie\:<br><a href\="http\://docs.powerfolder.com">http\://docs.powerfolder.com</a><br><br>Met vriendelijk groet,<br>{1}
 sendinvitation.description=Nodig een gebruiker uit om lid te worden van een folder
 sendinvitation.email=Naar e-mail...
-send_invitation.example_email_address=e-mail@domein.nl
 sendinvitation.folder.text=Verzend invitatie aan
 sendinvitation.folder.title=Verzend invitatie
 sendinvitation.key=i
-##sendinvitation.multi_users=Multiple users selected
 sendinvitation.name=Verzend invitatie
-##sendinvitation.no_users=No users selected
 sendinvitation.placetostore=Kies een plek om de invitatie op te slaan
 sendinvitation.subject=Invitatie voor een PowerFolder\: {0}
 sendinvitation.toclipboard=Naar klembord...
@@ -1064,6 +1089,7 @@ wizard.basicsetup.private=LAN en Internet
 wizard.basicsetup.title=Basis Setup
 ##wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
 ##wizard.basicsetup.upload.title=Unlimited connection speed
+##wizard.choose_location.select=Please select the directory
 wizard.choosedisklocation.select=Selecteer map
 wizard.choosedisklocation.title=Disk lokatie
 wizard.control.back=< Vorige
@@ -1076,8 +1102,13 @@ wizard.control.help=Help
 ##wizard.control.help.description=Show online help (Alt-8)
 wizard.control.next=Volgende >
 ##wizard.control.next.description=Go to next wizard step
+##wizard.create_folder.failed=Failed to create PowerFolder.
+##wizard.create_folder.title=Creating PowerFolder
+##wizard.create_folder.working=Creating PowerFolder, please wait.
 wizard.description=Opent wizard
 wizard.filesharing.sharedsuccess=Folder wordt nu gedeeld\!\nAndere gebruikers kunnen nu lid worden
+##wizard.folder_invitation.intro=You have received an invitation from {0}
+##wizard.folder_invitation.title=Folder Invitation
 ##wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
 ##wizard.host_panel.pcsjoin=Other computers can join this folder now
 ##wizard.host_panel.select=Please select the directory which should be the host
@@ -1095,24 +1126,26 @@ wizard.pfwizard.title=Wizard
 wizard.projectname.choose=Kies project naam
 wizard.projectname.entername=Vul de naam van uw project in
 wizard.projectname.title=Open invitatie
-##wizard.sendinvitations.invitationtext=Enter a message for the receiver
-##wizard.sendinvitations.invitationtextsample=
-##wizard.sendinvitations.join=Invitation files are required to join a folder.
+##wizard.send_invitations.invitation_text=Enter a message for the receiver
+##wizard.send_invitations.invitation_text_sample=
+##wizard.send_invitations.join=Invitation files are required to join a folder.
 wizard.send_invitations.never_untrusted=Geef invitatie bestanden nooit aan personen die u niet vertrouwd
-wizard.sendinvitations.offline=Niet verbonden
 wizard.send_invitations.over_powerfolder=Via PowerFolder Nu
 wizard.send_invitations.save_to_file=Opslaan als bestand
 wizard.send_invitations.send_by_mail=Verzend per e-mail
 wizard.send_invitations.send_invitation=Verzend invitatie
+wizard.send_invitations.title=Sla een invitatie op
+wizard.sendinvitations.offline=Niet verbonden
 wizard.sendinvitations.sendsuccess=Invitatie verzonden
 wizard.sendinvitations.sendsuccessinfo=U heeft de invitatie succesvol verzonden.
-wizard.send_invitations.title=Sla een invitatie op
+##wizard.setup_folder.sendinvitation=Send invitations afterwards
+##wizard.setup_folder.title=Create Folder
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Vult uw (dynamic) dns in
 wizard.setupdns.improvesread=Dit bevorderd uw bereikbaarheid als een een dynamisch IP adres heeft (echter niet vereist), dit is niet nodig als u een vast IP adres heeft
 wizard.setupdns.nodnssetup=U heeft nog geen (dynamic) dns adres\!
 wizard.setupdns.title=Setup (dynamic) dns
-##wizard.setupdns.validate=Validate 
+##wizard.setupdns.validate=Validate
 wizard.setupsuccess=Setup success
 ##wizard.successjoin=You have successfully joined the folder\!
 wizard.syncpcspanel.foldersyncsuccess=U heeft succesvol een "exacte kopie" van een folder op gezet\!\n
