--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -78,6 +78,7 @@ addressEditor.title=Zakres IP
 
 apps.dir.firefox=Firefox
 apps.dir.outlook=Outlook
+##apps.dir.sunbird=Sunbird
 apps.dir.thunderbird=Thunderbird
 
 buypro.description=Uaktualnij do PowerFolder Pro
@@ -101,10 +102,6 @@ chatpanel.member_left_folder_at_time={0} opuszczono folder, {1}
 clearcompleteddownloads.description=Czy\u015bci list\u0119 niedawno zako\u0144czonych pobiera\u0144
 clearcompleteddownloads.key=c
 clearcompleteddownloads.name=Czy\u015b\u0107
-
-clearrecentdownloads.description=Czy\u015bci list\u0119 niedawnych problem\u00f3w
-clearrecentdownloads.key=c
-clearrecentdownloads.name=Czy\u015b\u0107
 
 connect.description=R\u0119czne po\u0142\u0105czenie z U\u017cytkownikiem PowerFolder
 connect.dialog.text=Podaj nazw\u0119 hosta lub adres IP U\u017cytkownika, z kt\u00f3rym chcesz si\u0119 po\u0142\u0105czy\u0107.\n\nPowerFolder automatycznie \u0142\u0105czy si\u0119 z sieci\u0105 po kr\u00f3tkim czasie,\nu\u017cyj tej opcji, je\u015bli chcesz si\u0119 r\u0119cznie po\u0142\u0105czy\u0107 z U\u017cytkownikiem.\n
@@ -295,6 +292,19 @@ folder.members.synchronisation_panel.folder_size=Rozmiar Folderu
 folder.members.synchronisation_panel.local_size=Lokalny Rozmiar
 folder.members.synchronisation_panel.title=Status Synchronizacji
 
+##folder_create.progress.text=Creating PowerFolder '{0}'
+
+##folder_leave.button.key=L
+##folder_leave.button.name=Leave
+##folder_leave.description=Leave this PowerFolder
+folder_leave.dialog.delete=Usu\u0144 meta-dane
+##folder_leave.dialog.preview=Convert to preview
+folder_leave.dialog.sync_warning=Ten folder jest w trakcie synchronizacji\!
+##folder_leave.dialog.text=Leave PowerFolder {0}?
+##folder_leave.dialog.title=Leave PowerFolder {0}?
+folder_leave.key=L
+folder_leave.name=Opu\u015b\u0107 Folder
+
 ##foldercreate.description=Creates a new PowerFolder
 foldercreate.dialog.backupbyonlinestorage=Kopia zapasowa z Archiwum Online PowerFolder
 ##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
@@ -314,7 +324,6 @@ foldercreate.key=N
 foldercreate.name=Nowy Folder
 ##foldercreate.nameempty.text=Name of the PowerFolder should not be empty
 ##foldercreate.nameempty.title=Name required
-##foldercreate.progress.text=Creating PowerFolder '{0}'
 ##foldercreate.success=PowerFolder {0} successfully setup, local copy at '{1}'
 
 ##folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
@@ -340,14 +349,6 @@ folderjoin.name=Przy\u0142\u0105cz
 folderjoin.secret=Prywatny
 folderjoin.warning.notempty.text=Folder lokalnej kopii '{0}' nie jest pusty.\nWszystkie pliki zostan\u0105 wys\u0142ane do u\u017cytkownik\u00f3w przy\u0142\u0105czonych do folderu.\nCzy na pewno chcesz umie\u015bci\u0107 lokaln\u0105 kopi\u0119 tego folderu w \n'{1}'?
 folderjoin.warning.notempty.title=Lokalny folder bazowy nie jest pusty
-
-##folder_leave.description=Leave this PowerFolder
-folder_leave.dialog.delete=Usu\u0144 meta-dane
-folder_leave.dialog.sync_warning=Ten folder jest w trakcie synchronizacji\!
-##folder_leave.dialog.text=Leave PowerFolder {0}?
-##folder_leave.dialog.title=Leave PowerFolder {0}?
-folder_leave.key=L
-folder_leave.name=Opu\u015b\u0107 Folder
 
 foldermove.progress.text=Przenoszenie folderu '{0}'
 foldermove.progress.title=Przenoszenie Folderu
@@ -469,11 +470,14 @@ general.help=pomoc
 general.hide=schowaj
 general.hours=Godzina
 general.inet=Internet
+##general.invitor=Invitor
+##general.lan_only=LAN only
 general.local_copy_at=Lokalna kopia w
 general.localcopyplace=Wybierz miejsce dla lokalnej kopii
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=LAN
 general.member=Cz\u0142onek
+##general.message=Message
 general.minutes=Minuta
 general.monday=Poniedzia\u0142ek
 ##general.neverAskAgain=Never ask this again
@@ -485,6 +489,7 @@ general.ok.key=O
 general.overwrite=Nadpisz
 general.overwrite_all=Nadpisz wszystko
 general.powerfolder=PowerFolder
+##general.preview_folder=Preview folder
 general.recyclebin=Kosz
 ##general.reject=Reject
 general.saturday=Sobota
@@ -757,6 +762,7 @@ preferences.dialog.statusWaitDynDns=Prosz\u0119 czeka\u0107, DynDns {0} jest w t
 preferences.dialog.title=Ustawienia
 preferences.dialog.titleProcessing=przetwarzanie...
 ##preferences.dialog.use.relayed.connections=Use relayed connections to improve connectivity
+##preferences.dialog.use.udt.connections=Use NAT traversal to improve connectivity
 ##preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 ##preferences.dialog.usedeltaonlan=Use delta sync on LAN
 ##preferences.dialog.usedeltaonlan.tooltip=Enable if on a slow network (this may effect your CPU load)
@@ -770,6 +776,13 @@ preferences.dialog.xbehavior.exit=Wyjd\u017a z programu
 preferences.dialog.xbehavior.minimize=Minimalizuj do tacki systemowej
 preferences.key=p
 preferences.name=Ustawienia
+
+##preview_folder_remove.description=Remove this PowerFolder preview
+##preview_folder_remove.dialog.delete=Delete meta-data
+##preview_folder_remove.dialog.text=Remove PowerFolder {0}?
+##preview_folder_remove.dialog.title=Remove PowerFolder {0}?
+##preview_folder_remove.key=R
+##preview_folder_remove.name=Remove Folder
 
 previewfiles.description=Podgl\u0105d plik\u00f3w w tym Folderze
 previewfiles.key=P
@@ -820,6 +833,7 @@ quickinfo.folder.downloads_recently_completed=Liczba zako\u0144czonych pobra\u01
 quickinfo.folder.is_in_sync=Folder jest zsynchronizowany
 quickinfo.folder.is_synchronizing=Synchronizacja folderu...
 quickinfo.folder.number_of_files_and_size={0} Plik\u00f3w, {1}
+##quickinfo.folder.preview=Preview - No synchronization
 quickinfo.folder.status_of_folder=Stan folderu {0}
 quickinfo.friends.online={0} z {1} znajomych jest online
 quickinfo.friends.title=Szukaj znajomych
@@ -829,6 +843,7 @@ quickinfo.myfolders.insyncall=Wszystkie foldery s\u0105 zsynchronizowane
 quickinfo.myfolders.syncing=Synchronizowanie {0}
 ##quickinfo.myfolders.title=Status of my PowerFolders
 ##quickinfo.previewfolders.folders={0} in {1} folder(s)
+##quickinfo.previewfolders.nosync=Preview folders are not synchronized
 ##quickinfo.previewfolders.title=Status of Preview Folders
 quickinfo.recylcebin.files={0} plik\u00f3w w Koszu
 quickinfo.recylcebin.title=Kosz
@@ -861,6 +876,10 @@ recyclebin.confirmation.overwrite.on.restore.size.bytes=Rozmiar {0}
 recyclebin.confirmation.overwrite.on.restore.title=Przywr\u00f3ci\u0107 plik, nadpisa\u0107?
 recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=Przywr\u00f3ci\u0107 plik z Kosza?
 
+##remove_all_preview_folders.description=Removes all preview PowerFolders
+##remove_all_preview_folders.key=A
+##remove_all_preview_folders.name=Remove All Folders
+
 remove_from_recycle_bin.description=Usu\u0144 plik z Kosza PowerFolder
 remove_from_recycle_bin.key=D
 remove_from_recycle_bin.name=Usu\u0144 Plik
@@ -872,6 +891,10 @@ remove_pattern.dont=Nie Usuwaj
 remove_pattern.prompt=Wzorzec '{0}' zostanie usuni\u0119ty.
 remove_pattern.remove=Usu\u0144
 remove_pattern.title=Usu\u0144 ignorowany wzorzec
+
+##remove_previews_action.remove=Remove
+##remove_previews_action.text=Do you want to remove all preview folders?
+##remove_previews_action.title=Remove all preview folders
 
 removefriend.description=Usuwa u\u017cytkownika z listy znajomych
 removefriend.key=r
@@ -911,6 +934,10 @@ searchfriends.description=Szukaj znajomego
 searchfriends.key=S
 searchfriends.name=Szukaj
 
+send_invitation.example_email_address=email@domena.com
+send_invitation.multi_users=Zaznaczono kilku u\u017cytkownik\u00f3w
+send_invitation.no_users=Nie zaznaczono u\u017cytkownika
+
 ##sendinvitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
 ##sendinvitation.allFolders.title={0} already on all folders
 sendinvitation.ask_emailaddres.message=Adres email, na kt\u00f3ry ma by\u0107 wys\u0142ane zaproszenie
@@ -918,13 +945,10 @@ sendinvitation.ask_emailaddres.title=Adres email
 sendinvitation.body=Witaj {0},<br><br>{1} zaprasza Ci\u0119 do PowerFolder '{2}'<br>To zaproszenie jest potrzebne, aby uzyska\u0107 dost\u0119p do prywatnego folderu {1}.<br><br>1) Aby uzyska\u0107 dost\u0119p do plik\u00f3w musisz najpierw pobra\u0107 i zainstalowa\u0107 darmowe<br>oprogramowanie PowerFolder ze strony<br>http\://www.powerfolder.com.<br><br>2) Po zainstalowaniu PowerFolder kliknij dwa razy na plik<br>z zaproszeniem za\u0142\u0105czony do tego emaila.<br><br>Aby uzyska\u0107 wi\u0119cej informacji lub pomoc w instalacji lub u\u017cywaniu PowerFolder zapraszamy<br>do odwiedzenia naszych Zasob\u00f3w Dokumentacji na http\://docs.powerfolder.com<br><br>Dzi\u0119kujemy,<br>The PowerFolder Development Team<br>PowerFolder, Profesjonalne Udost\u0119pnianie Folder\u00f3w<br>
 sendinvitation.description=Zapro\u015b u\u017cytkownika do folderu
 sendinvitation.email=Na email...
-send_invitation.example_email_address=email@domena.com
 sendinvitation.folder.text=Wy\u015blij zaproszenie do
 sendinvitation.folder.title=Wy\u015blij Zaproszenie
 sendinvitation.key=i
-send_invitation.multi_users=Zaznaczono kilku u\u017cytkownik\u00f3w
 sendinvitation.name=Wy\u015blij Zaproszenie
-send_invitation.no_users=Nie zaznaczono u\u017cytkownika
 sendinvitation.placetostore=Wybierz miejsce, w kt\u00f3rym chcesz zachowa\u0107 zaproszenie
 sendinvitation.subject=Zaproszenie do PowerFolder '{0}'
 sendinvitation.toclipboard=Do schowka...
@@ -1065,6 +1089,7 @@ wizard.basicsetup.private=LAN oraz Internet
 wizard.basicsetup.title=Podstawowa konfiguracja
 wizard.basicsetup.upload.text=Nieograniczona pr\u0119dko\u015b\u0107 po\u0142\u0105czenia pozwala na nieograniczon\u0105 liczb\u0119 po\u0142\u0105cze\u0144.
 wizard.basicsetup.upload.title=Nieograniczona pr\u0119dko\u015b\u0107 po\u0142\u0105czenia
+##wizard.choose_location.select=Please select the directory
 wizard.choosedisklocation.select=Wybierz folder
 wizard.choosedisklocation.title=Miejsce na dysku
 wizard.control.back=< Wstecz
@@ -1077,8 +1102,13 @@ wizard.control.help=Pomoc
 wizard.control.help.description=Poka\u017c pomoc online (Alt-8)
 wizard.control.next=Dalej >
 wizard.control.next.description=Przejd\u017a do nast\u0119pnego kroku kreatora
+##wizard.create_folder.failed=Failed to create PowerFolder.
+##wizard.create_folder.title=Creating PowerFolder
+##wizard.create_folder.working=Creating PowerFolder, please wait.
 wizard.description=Otwiera kreatora
 wizard.filesharing.sharedsuccess=Pomy\u015blnie skonfigurowano folder wsp\u00f3\u0142dzielony\!\nInni u\u017cytkownicy mog\u0105 si\u0119 teraz przy\u0142\u0105czy\u0107
+##wizard.folder_invitation.intro=You have received an invitation from {0}
+##wizard.folder_invitation.title=Folder Invitation
 ##wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
 ##wizard.host_panel.pcsjoin=Other computers can join this folder now
 ##wizard.host_panel.select=Please select the directory which should be the host
@@ -1098,16 +1128,18 @@ wizard.projectname.entername=Wpisz nazw\u0119 Twojego projektu
 wizard.projectname.title=Wczytaj zaproszenie
 wizard.send_invitations.invitation_text=Wiadomo\u015b\u0107 dla odbiorcy
 wizard.send_invitations.invitation_text_sample=Wiadomo\u015b\u0107 dla odbiorcy zaproszenia...
-##wizard.sendinvitations.join=Invitation files are required to join a folder.
+##wizard.send_invitations.join=Invitation files are required to join a folder.
 wizard.send_invitations.never_untrusted=Nigdy nie dawaj swoich plik\u00f3w zaprosze\u0144 niezaufanym osobom.
-wizard.sendinvitations.offline=Nie po\u0142\u0105czony
 wizard.send_invitations.over_powerfolder=Przez PowerFolder
 wizard.send_invitations.save_to_file=Zapisz jako plik
 wizard.send_invitations.send_by_mail=Wy\u015blij poczt\u0105
 wizard.send_invitations.send_invitation=Wy\u015blij zaproszenie
+wizard.send_invitations.title=Zapisz zaproszenie
+wizard.sendinvitations.offline=Nie po\u0142\u0105czony
 wizard.sendinvitations.sendsuccess=Zaproszenie wys\u0142ane
 wizard.sendinvitations.sendsuccessinfo=Pomy\u015blnie wys\u0142ano zaproszenie
-wizard.send_invitations.title=Zapisz zaproszenie
+##wizard.setup_folder.sendinvitation=Send invitations afterwards
+##wizard.setup_folder.title=Create Folder
 wizard.setupdns.dyndnshomepage=Strona domowa DynDns
 wizard.setupdns.enterdns=Wprowad\u017a sw\u00f3j (dynamiczny) dns
 wizard.setupdns.improvesread=Zwi\u0119ksza Twoj\u0105 osi\u0105galno\u015b\u0107. Nie jest jednak konieczne.
