--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -78,6 +78,7 @@ addressEditor.title=IP-Omr\u00e5de
 
 ##apps.dir.firefox=Firefox
 ##apps.dir.outlook=Outlook
+##apps.dir.sunbird=Sunbird
 ##apps.dir.thunderbird=Thunderbird
 
 ##buypro.description=Upgrade to PowerFolder Pro now
@@ -101,10 +102,6 @@ chatpanel.member_left_folder_at_time={0} gick ur foldern kl {1}
 ##clearcompleteddownloads.description=Clears the list of the recently completed downloads (Alt-3)
 clearcompleteddownloads.key=R
 clearcompleteddownloads.name=Rensa
-
-##clearrecentdownloads.description=Clears the list of the recent problems
-##clearrecentdownloads.key=c
-##clearrecentdownloads.name=Cleanup
 
 connect.description=Manuell anslutning till en PowerFolder anv\u00e4ndare
 connect.dialog.text=Ange hostname eller IP f\u00f6r anv\u00e4ndaren du vill ansluta till.\n\nPowerFolder ansluter automatiskt tilln\u00e4tverket efter en liten stund,\n anv\u00e4nd detta val om du vill ansluta manuellt till en anv\u00e4ndare.\n 
@@ -295,12 +292,26 @@ folder.members.synchronisation_panel.folder_size=Folderstorlek
 folder.members.synchronisation_panel.local_size=Lokal storlek
 folder.members.synchronisation_panel.title=Medlemmens synk-status
 
+##folder_create.progress.text=Creating PowerFolder '{0}'
+
+##folder_leave.button.key=L
+##folder_leave.button.name=Leave
+##folder_leave.description=Leave this PowerFolder
+##folder_leave.dialog.delete=Delete meta-data
+##folder_leave.dialog.preview=Convert to preview
+folder_leave.dialog.sync_warning=Foldern h\u00e5ller p\u00e5 att synkroniseras\!
+##folder_leave.dialog.text=Leave PowerFolder {0}?
+##folder_leave.dialog.title=Leave PowerFolder {0}?
+folder_leave.key=L
+folder_leave.name=L\u00e4mna folder
+
 ##foldercreate.description=Creates a new PowerFolder
 ##foldercreate.dialog.backupbyonlinestorage=Backup by Online Storage
 ##foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
 ##foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 ##foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
 ##foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
+##foldercreate.dialog.sendinvitation=Send invitations afterwards
 ##foldercreate.dialog.settings=Enter the settings for the new PowerFolder
 ##foldercreate.dialog.title=Create new PowerFolder
 ##foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
@@ -313,7 +324,6 @@ foldercreate.key=s
 foldercreate.name=Ny folder
 ##foldercreate.nameempty.text=Name of the PowerFolder should not be empty
 ##foldercreate.nameempty.title=Name required
-##foldercreate.progress.text=Creating PowerFolder '{0}'
 ##foldercreate.success=PowerFolder {0} successfully setup, local copy at '{1}'
 
 ##folderexception.dialog.text=Unable to join PowerFolder '{0}'.\nReason\: {1}
@@ -339,14 +349,6 @@ folderjoin.name=G\u00e5 med
 folderjoin.secret=Privat
 folderjoin.warning.notempty.text=Mappen f\u00f6r den lokala kopian av foldern '{0}' \u00e4r inte tom.\nAlla filersom finns i mappen kommer att ladddas upp till folderns samtliga medlemmar.\n\u00c4r du verkligen s\u00e4ker p\u00e5 att du vill placera den lokala kopian av foldern i\n'{1}' ?
 folderjoin.warning.notempty.title=Lokal bas-mapp \u00e4r inte tom
-
-##folder_leave.description=Leave this PowerFolder
-##folder_leave.dialog.delete=Delete meta-data
-folder_leave.dialog.sync_warning=Foldern h\u00e5ller p\u00e5 att synkroniseras\!
-##folder_leave.dialog.text=Leave PowerFolder {0}?
-##folder_leave.dialog.title=Leave PowerFolder {0}?
-folder_leave.key=L
-folder_leave.name=L\u00e4mna folder
 
 ##foldermove.progress.text=Moving folder '{0}'
 ##foldermove.progress.title=Folder Move
@@ -468,11 +470,14 @@ general.help=hj\u00e4lp
 general.hide=g\u00f6m
 ##general.hours=Hour(s)
 general.inet=Internet
+##general.invitor=Invitor
+##general.lan_only=LAN only
 general.local_copy_at=Lokal kopia
 general.localcopyplace=V\u00e4lj en plats f\u00f6r lokal kopia
 general.localized_date_format=yyyy MMMM dd
 general.localnet=LAN
 general.member=Medlem
+##general.message=Message
 ##general.minutes=Minute(s)
 ##general.monday=Monday
 ##general.neverAskAgain=Never ask this again
@@ -484,6 +489,7 @@ general.ok.key=O
 general.overwrite=Skriv \u00f6ver
 general.overwrite_all=Skriv \u00f6ver alla
 general.powerfolder=PowerFolder
+##general.preview_folder=Preview folder
 general.recyclebin=Papperskorg 
 ##general.reject=Reject
 ##general.saturday=Saturday
@@ -501,7 +507,7 @@ general.uploads=Uppladdningar
 general.user=Anv\u00e4ndare
 ##general.webservice=Online Storage
 ##general.wednesday=Wednesday
-##general.whatisthis=What is this?
+##general.what_is_this=What is this?
 general.yesterday=ig\u00e5r
 
 hideoffline.description=Endast anv\u00e4ndare som \u00e4r online visas i detta s\u00f6kresultat 
@@ -756,6 +762,7 @@ preferences.dialog.statusWaitDynDns=Var v\u00e4nlig v\u00e4nta, DynDNS {0} kontr
 preferences.dialog.title=Inst\u00e4llningar
 preferences.dialog.titleProcessing=Arbetar...
 ##preferences.dialog.use.relayed.connections=Use relayed connections to improve connectivity
+##preferences.dialog.use.udt.connections=Use NAT traversal to improve connectivity
 ##preferences.dialog.use_pf_icon=Use PowerFolder icon in Windows
 ##preferences.dialog.usedeltaonlan=Use delta sync on LAN
 ##preferences.dialog.usedeltaonlan.tooltip=Enable if on a slow network (this may effect your CPU load)
@@ -769,6 +776,13 @@ preferences.dialog.xbehavior.exit=Avsluta programmet
 preferences.dialog.xbehavior.minimize=Minimera till systemf\u00e4ltet
 preferences.key=I
 preferences.name=Inst\u00e4llningar
+
+##preview_folder_remove.description=Remove this PowerFolder preview
+##preview_folder_remove.dialog.delete=Delete meta-data
+##preview_folder_remove.dialog.text=Remove PowerFolder {0}?
+##preview_folder_remove.dialog.title=Remove PowerFolder {0}?
+##preview_folder_remove.key=R
+##preview_folder_remove.name=Remove Folder
 
 previewfiles.description=F\u00f6rhandsgranska filerna i denna folder
 previewfiles.key=F
@@ -819,6 +833,7 @@ quickinfo.download.title=Nedladdningsstatus
 quickinfo.folder.is_in_sync=Foldern \u00e4r synkroniserad
 quickinfo.folder.is_synchronizing=Foldern synkroniseras...
 quickinfo.folder.number_of_files_and_size={0} fil(er), {1}
+##quickinfo.folder.preview=Preview - No synchronization
 quickinfo.folder.status_of_folder=Status av {0}
 quickinfo.friends.online={0} av {1} v\u00e4n(ner) \u00e4r online
 quickinfo.friends.title=Hitta v\u00e4nner
@@ -828,6 +843,7 @@ quickinfo.myfolders.insyncall=Alla foldrar \u00e4r synkroniserade
 quickinfo.myfolders.syncing=Synkroniserar {0}
 ##quickinfo.myfolders.title=Status of my PowerFolders
 ##quickinfo.previewfolders.folders={0} in {1} folder(s)
+##quickinfo.previewfolders.nosync=Preview folders are not synchronized
 ##quickinfo.previewfolders.title=Status of Preview Folders
 quickinfo.recylcebin.files={0} fil(er) i papperskorgen
 quickinfo.recylcebin.title=Papperskorgen
@@ -860,6 +876,10 @@ recyclebin.confirmation.overwrite.on.restore.size.bytes=Storlek {0}
 recyclebin.confirmation.overwrite.on.restore.title=\u00c5terst\u00e4ll fil, skriv \u00f6ver?
 recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=Med fil fr\u00e5n papperskorgen?
 
+##remove_all_preview_folders.description=Removes all preview PowerFolders
+##remove_all_preview_folders.key=A
+##remove_all_preview_folders.name=Remove All Folders
+
 remove_from_recycle_bin.description=Tag bort filen fr\u00e5n PowerFolders papperskorg
 remove_from_recycle_bin.key=t
 remove_from_recycle_bin.name=Tag bort fil
@@ -871,6 +891,10 @@ remove_from_recycle_bin_confimation.title=Tag bort filer?
 ##remove_pattern.prompt=Pattern '{0}' will be removed.
 ##remove_pattern.remove=Remove
 ##remove_pattern.title=Remove ignore pattern
+
+##remove_previews_action.remove=Remove
+##remove_previews_action.text=Do you want to remove all preview folders?
+##remove_previews_action.title=Remove all preview folders
 
 removefriend.description=Tar bort anv\u00e4ndare fr\u00e5n v\u00e4nlistan
 removefriend.key=t
@@ -910,6 +934,10 @@ searchfriends.description=S\u00f6k efter en v\u00e4n
 searchfriends.key=S
 searchfriends.name=S\u00f6k
 
+send_invitation.example_email_address=e-post@dom\u00e4n.se
+##send_invitation.multi_users=Multiple users selected
+##send_invitation.no_users=No users selected
+
 ##sendinvitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
 ##sendinvitation.allFolders.title={0} already on all folders
 sendinvitation.ask_emailaddres.message=E-post-adress att s\u00e4nda inbjudan till
@@ -917,13 +945,10 @@ sendinvitation.ask_emailaddres.title=E-post adress
 sendinvitation.body=Hej {0},<br><br>{1} inbjuder dig till PowerFolder '{2}'<br>Denna inbjudan anv\u00e4nds f\u00f6r att komma \u00e5t en privat folder hos {1}.<br><br>1) f\u00f6r att komma \u00e5t filerna beh\u00f6ver du f\u00f6rst ladda ner och installera det fria<br>programmet PowerFolder fr\u00e5n<br>http\://www.powerfolder.com.<br><br>2) Sedan du har installerat PowerFolder dubbel-klicka p\u00e5 inbjudningsfilen<br>som \u00e4r bifogad denna e-post.<br><br>F\u00f6r mer information eller hj\u00e4lp med att installera eller att anv\u00e4nda PowerFolder<br>var v\u00e4nlig g\u00e5 till v\u00e5r dokumentation p\u00e5 http\://docs.powerfolder.com<br><br>H\u00e4lsningar,<br>PowerFolder utvecklingsteam<br>PowerFolder, professionell fildelning<br>
 sendinvitation.description=Inbjuder en anv\u00e4ndare till en folder
 sendinvitation.email=Till e-post...
-send_invitation.example_email_address=e-post@dom\u00e4n.se
 sendinvitation.folder.text=Skicka inbjudan till
 sendinvitation.folder.title=Skicka inbjudan
 sendinvitation.key=i
-##sendinvitation.multi_users=Multiple users selected
 sendinvitation.name=Skicka inbjudan
-##sendinvitation.no_users=No users selected
 sendinvitation.placetostore=V\u00e4lj plats f\u00f6r att spara inbjudan
 sendinvitation.subject=Inbjudan till PowerFolder '{0}'
 sendinvitation.toclipboard=Till klippbordet...
@@ -1064,6 +1089,7 @@ wizard.basicsetup.private=LAN och Internet
 wizard.basicsetup.title=Grundl\u00e4ggande inst\u00e4llningar
 ##wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
 ##wizard.basicsetup.upload.title=Unlimited connection speed
+##wizard.choose_location.select=Please select the directory
 wizard.choosedisklocation.select=V\u00e4lj mapp
 wizard.choosedisklocation.title=Plats p\u00e5 disk
 wizard.control.back=< Tillbaka
@@ -1076,8 +1102,13 @@ wizard.control.help=Hj\u00e4lp
 ##wizard.control.help.description=Show online help (Alt-8)
 wizard.control.next=N\u00e4sta >
 ##wizard.control.next.description=Go to next wizard step
+##wizard.create_folder.failed=Failed to create PowerFolder.
+##wizard.create_folder.title=Creating PowerFolder
+##wizard.create_folder.working=Creating PowerFolder, please wait.
 wizard.description=\u00d6ppnar assistenten
 wizard.filesharing.sharedsuccess=Du lyckades dela en ny folder\!\nAndtra anv\u00e4ndare kan g\u00e5 med nu
+##wizard.folder_invitation.intro=You have received an invitation from {0}
+##wizard.folder_invitation.title=Folder Invitation
 ##wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
 ##wizard.host_panel.pcsjoin=Other computers can join this folder now
 ##wizard.host_panel.select=Please select the directory which should be the host
@@ -1095,24 +1126,26 @@ wizard.pfwizard.title=Assistenten
 wizard.projectname.choose=V\u00e4lj projekt namn
 wizard.projectname.entername=Mata in namnet p\u00e5 ditt projekt
 wizard.projectname.title=Ladda inbjudan
-##wizard.sendinvitations.invitationtext=Enter a message for the receiver
-##wizard.sendinvitations.invitationtextsample=
-##wizard.sendinvitations.join=Invitation files are required to join a folder.
+##wizard.send_invitations.invitation_text=Enter a message for the receiver
+##wizard.send_invitations.invitation_text_sample=
+##wizard.send_invitations.join=Invitation files are required to join a folder.
 wizard.send_invitations.never_untrusted=Ge aldrig ut inbjudningsfiler till n\u00e5gon du inte litar p\u00e5.
-wizard.sendinvitations.offline=Ej ansluten
 wizard.send_invitations.over_powerfolder=Via PowerFolder nu
 wizard.send_invitations.save_to_file=Spara som en fil
 wizard.send_invitations.send_by_mail=Skicka med e-post
 wizard.send_invitations.send_invitation=Skicka inbjudan
+wizard.send_invitations.title=Spara inbjudan
+wizard.sendinvitations.offline=Ej ansluten
 wizard.sendinvitations.sendsuccess=Inbjudan skickad
 wizard.sendinvitations.sendsuccessinfo=Du lyckades s\u00e4nda iv\u00e4g inbjudan.
-wizard.send_invitations.title=Spara inbjudan
+##wizard.setup_folder.sendinvitation=Send invitations afterwards
+##wizard.setup_folder.title=Create Folder
 wizard.setupdns.dyndnshomepage=DynDNS hemsida
 wizard.setupdns.enterdns=Ange din (dynamiska) DNS
 wizard.setupdns.improvesread=Det g\u00f6r det l\u00e4ttare att n\u00e5 dig. Men det \u00e4r inget som kr\u00e4vs
 wizard.setupdns.nodnssetup=Du har inte satt upp n\u00e5gon (dynamisk) DNS adress \u00e4nnu\!
 wizard.setupdns.title=S\u00e4tt upp (dynamisk) DNS
-##wizard.setupdns.validate=Validate 
+##wizard.setupdns.validate=Validate
 wizard.setupsuccess=Inst\u00e4llningarna lyckades
 ##wizard.successjoin=You have successfully joined the folder\!
 ##wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
