--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -78,6 +78,7 @@ addressEditor.title=IP-\u8303\u56f4
 
 apps.dir.firefox=Firefox
 apps.dir.outlook=Outlook
+##apps.dir.sunbird=Sunbird
 apps.dir.thunderbird=Thunderbird
 
 buypro.description=\u7acb\u5373\u5347\u7ea7\u5230PowerFolder\u4e13\u4e1a\u7248
@@ -101,10 +102,6 @@ chatpanel.member_left_folder_at_time={0} \u4e8e {1} \u79bb\u5f00\u6587\u4ef6\u59
 clearcompleteddownloads.description=\u6e05\u9664\u6700\u8fd1\u5b8c\u6210\u7684\u4e0b\u8f7d\u5217\u8868 (Alt-3)
 clearcompleteddownloads.key=c
 clearcompleteddownloads.name=\u6e05\u9664
-
-clearrecentdownloads.description=\u6e05\u9664\u6700\u8fd1\u7684\u95ee\u9898\u5217\u8868
-clearrecentdownloads.key=c
-clearrecentdownloads.name=\u6e05\u9664
 
 connect.description=\u624b\u52a8\u8fde\u63a5\u5230 Powerfolder \u7528\u6237
 connect.dialog.text=\u8bf7\u8f93\u5165\u4f60\u60f3\u8fde\u63a5\u7684\u4e3b\u673a\u540d\u6216IP\n\nPowerFolder\u5c06\u5728\u7a0d\u540e\u81ea\u52a8\u8fde\u63a5\uff0c\n\u5982\u679c\u4f60\u60f3\u624b\u52a8\u8fde\u63a5\u8bf7\u4f7f\u7528\u8be5\u9009\u9879\u3002\n
@@ -295,6 +292,19 @@ folder.members.synchronisation_panel.folder_size=\u6587\u4ef6\u5939\u5927\u5c0f
 folder.members.synchronisation_panel.local_size=\u672c\u5730\u5927\u5c0f
 folder.members.synchronisation_panel.title=\u6210\u5458\u540c\u6b65\u72b6\u6001
 
+folder_create.progress.text=\u521b\u5efaPowerFolder '{0}'
+
+##folder_leave.button.key=L
+##folder_leave.button.name=Leave
+folder_leave.description=\u79bb\u5f00\u8fd9\u4e2aPowerFolder
+folder_leave.dialog.delete=\u5220\u9664\u5143\u6570\u636e
+##folder_leave.dialog.preview=Convert to preview
+folder_leave.dialog.sync_warning=\u6b64\u6587\u4ef6\u5939\u6b63\u5728\u540c\u6b65\!
+folder_leave.dialog.text=\u79bb\u5f00PowerFolder {0}?
+folder_leave.dialog.title=\u79bb\u5f00PowerFolder {0}?
+folder_leave.key=L
+folder_leave.name=\u79bb\u5f00\u6587\u4ef6\u5939
+
 foldercreate.description=\u521b\u5efa\u65b0\u7684PowerFolder
 foldercreate.dialog.backupbyonlinestorage=\u7528\u5728\u7ebf\u5b58\u50a8\u5907\u4efd
 foldercreate.dialog.backuperror.text=\u4e0d\u80fd\u8bbe\u7f6e\u5728\u7ebf\u5b58\u50a8\u6765\u5907\u4efd\u8fd9\u4e2aPowerFolder
@@ -314,7 +324,6 @@ foldercreate.key=s
 foldercreate.name=\u5171\u4eab\u6587\u4ef6\u5939
 foldercreate.nameempty.text=PowerFolder\u7684\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a
 foldercreate.nameempty.title=\u8981\u6c42\u8f93\u5165\u540d\u79f0
-folder_create.progress.text=\u521b\u5efaPowerFolder '{0}'
 foldercreate.success=\u6210\u529f\u8bbe\u7f6ePowerFolder {0} \uff0c\u672c\u5730\u7684\u590d\u4ef6\u5728 '{1}'
 
 folderexception.dialog.text=\u4e0d\u80fd\u52a0\u5165 PowerFolder '{0}'\u3002\n\u539f\u56e0\: {1}
@@ -340,14 +349,6 @@ folderjoin.preview_only=
 folderjoin.secret=\u79c1\u6709
 folderjoin.warning.notempty.text=\u6587\u4ef6\u5939 '{0}' \u672c\u5730\u526f\u672c\u7684\u76ee\u5f55\u975e\u7a7a\u3002\n\u6587\u4ef6\u5939\u4e0b\u7684\u6587\u4ef6\u5c06\u88ab\u4e0a\u4f20\u7ed9\u5176\u4ed6\u6210\u5458\u3002\n\u4f60\u786e\u5b9a\u8981\u628a\u6587\u4ef6\u5939\u7684\u672c\u5730\u526f\u672c\u653e\u5728\n'{1}' ?
 folderjoin.warning.notempty.title=\u672c\u5730\u6839\u76ee\u5f55\u975e\u7a7a
-
-folder_leave.description=\u79bb\u5f00\u8fd9\u4e2aPowerFolder
-folder_leave.dialog.delete=\u5220\u9664\u5143\u6570\u636e
-folder_leave.dialog.sync_warning=\u6b64\u6587\u4ef6\u5939\u6b63\u5728\u540c\u6b65\!
-folder_leave.dialog.text=\u79bb\u5f00PowerFolder {0}?
-folder_leave.dialog.title=\u79bb\u5f00PowerFolder {0}?
-folder_leave.key=L
-folder_leave.name=\u79bb\u5f00\u6587\u4ef6\u5939
 
 foldermove.progress.text=\u6b63\u5728\u79fb\u52a8\u6587\u4ef6\u5939 '{0}'
 foldermove.progress.title=\u79fb\u52a8\u6587\u4ef6\u5939
@@ -469,11 +470,14 @@ general.help=\u5e2e\u52a9
 general.hide=\u9690\u85cf
 general.hours=\u5c0f\u65f6
 general.inet=i-net
+##general.invitor=Invitor
+##general.lan_only=LAN only
 general.local_copy_at=\u672c\u5730\u526f\u672c
 general.localcopyplace=\u9009\u62e9\u5b58\u653e\u672c\u5730\u526f\u672c\u7684\u4f4d\u7f6e
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=\u672c\u5730
 general.member=\u6210\u5458
+##general.message=Message
 general.minutes=\u5206\u949f
 general.monday=\u661f\u671f\u4e00
 general.neverAskAgain=\u4e0d\u518d\u8be2\u95ee
@@ -485,6 +489,7 @@ general.ok.key=O
 general.overwrite=\u8986\u76d6
 general.overwrite_all=\u8986\u76d6\u6240\u6709
 general.powerfolder=PowerFolder
+##general.preview_folder=Preview folder
 general.recyclebin=\u56de\u6536\u7ad9
 general.reject=\u62d2\u7edd
 general.saturday=\u661f\u671f\u516d
@@ -757,6 +762,7 @@ preferences.dialog.statusWaitDynDns=\u7a0d\u7b49\uff0c\u52a8\u6001Dns {0} \u6b63
 preferences.dialog.title=\u8bbe\u7f6e
 preferences.dialog.titleProcessing=\u5904\u7406\u4e2d\u2026\u2026
 preferences.dialog.use.relayed.connections=\u4f7f\u7528\u5ef6\u8fdf\u8fde\u63a5\u6765\u6539\u5584\u8fde\u63a5\u6027\u80fd
+##preferences.dialog.use.udt.connections=Use NAT traversal to improve connectivity
 preferences.dialog.use_pf_icon=\u5728Windows\u4e2d\u4f7f\u7528PowerFolder\u56fe\u6807
 preferences.dialog.usedeltaonlan=\u5728\u5c40\u57df\u7f51\u4f7f\u7528\u4e09\u65b9\u540c\u6b65
 preferences.dialog.usedeltaonlan.tooltip=\u5728\u8f83\u6162\u7684\u7f51\u7edc\u4e2d\u542f\u7528 (\u53ef\u80fd\u4f1a\u5360\u7528CPU\u8d1f\u8f7d)
@@ -770,6 +776,13 @@ preferences.dialog.xbehavior.exit=\u9000\u51fa\u7a0b\u5e8f
 preferences.dialog.xbehavior.minimize=\u6700\u5c0f\u5316\u5230\u4efb\u52a1\u680f
 preferences.key=p
 preferences.name=\u8bbe\u7f6e
+
+##preview_folder_remove.description=Remove this PowerFolder preview
+##preview_folder_remove.dialog.delete=Delete meta-data
+##preview_folder_remove.dialog.text=Remove PowerFolder {0}?
+##preview_folder_remove.dialog.title=Remove PowerFolder {0}?
+##preview_folder_remove.key=R
+##preview_folder_remove.name=Remove Folder
 
 previewfiles.description=\u5728\u6587\u4ef6\u5939\u4e2d\u9884\u89c8\u6587\u4ef6
 previewfiles.key=P
@@ -820,6 +833,7 @@ quickinfo.folder.downloads_recently_completed=, \u6700\u8fd1\u5b8c\u6210\u4e86{0
 quickinfo.folder.is_in_sync=\u6587\u4ef6\u5939\u6b63\u5728\u540c\u6b65
 quickinfo.folder.is_synchronizing=\u6b63\u5728\u540c\u6b65\u6587\u4ef6\u5939\u2026\u2026
 quickinfo.folder.number_of_files_and_size={0} \u6587\u4ef6\uff0c {1}
+##quickinfo.folder.preview=Preview - No synchronization
 quickinfo.folder.status_of_folder={0} \u7684\u72b6\u6001
 quickinfo.friends.online={1} \u4f4d\u597d\u53cb\u4e2d\u6709 {0} \u5728\u7ebf
 quickinfo.friends.title=\u67e5\u627e\u597d\u53cb
@@ -829,6 +843,7 @@ quickinfo.myfolders.insyncall=\u5df2\u540c\u6b65\u6240\u6709\u6587\u4ef6\u5939
 quickinfo.myfolders.syncing=\u6b63\u5728\u540c\u6b65 {0}
 quickinfo.myfolders.title=\u6211\u7684PowerFolder\u7684\u72b6\u6001
 quickinfo.previewfolders.folders={0} / {1} \u4e2a\u6587\u4ef6\u5939
+##quickinfo.previewfolders.nosync=Preview folders are not synchronized
 quickinfo.previewfolders.title=\u9884\u89c8\u6587\u4ef6\u5939\u7684\u72b6\u6001
 quickinfo.recylcebin.files={0} \u4e2a\u6587\u4ef6
 quickinfo.recylcebin.title=\u56de\u6536\u7ad9
@@ -861,6 +876,10 @@ recyclebin.confirmation.overwrite.on.restore.size.bytes=\u5927\u5c0f {0}
 recyclebin.confirmation.overwrite.on.restore.title=\u6062\u590d\u6587\u4ef6\uff0c\u8986\u76d6?
 recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=\u4f7f\u7528\u56de\u6536\u7ad9\u7684\u6587\u4ef6?
 
+##remove_all_preview_folders.description=Removes all preview PowerFolders
+##remove_all_preview_folders.key=A
+##remove_all_preview_folders.name=Remove All Folders
+
 remove_from_recycle_bin.description=\u4ece PowerFolder \u56de\u6536\u7ad9\u5220\u9664\u6587\u4ef6
 remove_from_recycle_bin.key=D
 remove_from_recycle_bin.name=\u5220\u9664\u6587\u4ef6
@@ -872,6 +891,10 @@ remove_pattern.dont=\u4e0d\u8981\u5220\u9664
 remove_pattern.prompt=\u6837\u5f0f '{0}' \u5c06\u88ab\u5220\u9664
 remove_pattern.remove=\u5220\u9664
 remove_pattern.title=\u5220\u9664\u5ffd\u7565\u6837\u5f0f
+
+##remove_previews_action.remove=Remove
+##remove_previews_action.text=Do you want to remove all preview folders?
+##remove_previews_action.title=Remove all preview folders
 
 removefriend.description=\u4ece\u597d\u53cb\u5217\u8868\u5220\u9664\u7528\u6237
 removefriend.key=r
@@ -911,6 +934,10 @@ searchfriends.description=\u67e5\u627e\u597d\u53cb
 searchfriends.key=S
 searchfriends.name=\u67e5\u627e
 
+send_invitation.example_email_address=email@domain.com
+send_invitation.multi_users=\u9009\u62e9\u591a\u4e2a\u7528\u6237
+send_invitation.no_users=\u6ca1\u6709\u9009\u62e9\u7528\u6237
+
 sendinvitation.allFolders.text=\u4e0d\u80fd\u9080\u8bf7 {0} \u52a0\u5165\u4efb\u4f55\u6587\u4ef6\u5939\n\u8be5\u7528\u6237\u5df2\u7ecf\u52a0\u5165\u4f60\u7684\u6240\u6709\u6587\u4ef6\u5939
 sendinvitation.allFolders.title={0} \u5df2\u7ecf\u52a0\u5165\u6240\u6709\u6587\u4ef6\u5939
 sendinvitation.ask_emailaddres.message=\u8981\u53d1\u9001\u9080\u8bf7\u7684\u7535\u5b50\u90ae\u7bb1\u5730\u5740
@@ -918,13 +945,10 @@ sendinvitation.ask_emailaddres.title=\u7535\u90ae\u5730\u5740
 sendinvitation.body={0} \uff0c\u4f60\u597d<br><br>{1} \u9080\u8bf7\u4f60\u4f7f\u7528PowerFolder\u7684\u6587\u4ef6\u5939 '{2}'<br>\u8fd9\u4e2a\u9080\u8bf7\u7528\u6765\u8fdb\u5165 {1} \u7684\u79c1\u6709\u6587\u4ef6\u5939\u3002<br><br>1) \u8981\u8fdb\u5165\u8be5\u6587\u4ef6\uff0c\u4f60\u9996\u5148\u8981\u4e0b\u8f7d\u5e76\u5b89\u88c5\u514d\u8d39\u8f6f\u4ef6PowerFolder\u3002<br>\u4e0b\u8f7d\u5730\u5740\u4e3a\uff1ahttp\://www.powerfolder.com\u3002<br><br>2) \u5b89\u88c5\u5b8cPowerFolder\u540e\uff0c\u53f3\u952e\u9009\u62e9\u90ae\u4ef6\u9644\u4ef6\u7684\u9080\u8bf7\u3002<br><br>\u5b89\u88c5\u6216\u4f7f\u7528\u5e2e\u52a9\u53ca\u66f4\u591a\u4fe1\u606f\uff0c\u8bf7\u8bbf\u95ee\u5728\u7ebf\u6587\u6863\uff1a http\://docs.powerfolder.com<br><br>\u8c22\u8c22\uff01<br>PowerFolder\u5f00\u53d1\u56e2\u961f<br>PowerFolder\uff0c\u4e13\u4e1a\u6587\u4ef6\u5939\u5171\u4eab\u5de5\u5177<br>
 sendinvitation.description=\u9080\u8bf7\u7528\u6237\u5230\u6587\u4ef6\u5939
 sendinvitation.email=To email...
-send_invitation.example_email_address=email@domain.com
 sendinvitation.folder.text=\u53d1\u9001\u9080\u8bf7\u7ed9
 sendinvitation.folder.title=\u53d1\u9001\u9080\u8bf7
 sendinvitation.key=i
-send_invitation.multi_users=\u9009\u62e9\u591a\u4e2a\u7528\u6237
 sendinvitation.name=\u53d1\u9001\u9080\u8bf7
-send_invitation.no_users=\u6ca1\u6709\u9009\u62e9\u7528\u6237
 sendinvitation.placetostore=\u9009\u62e9\u5b58\u653e\u9080\u8bf7\u7684\u4f4d\u7f6e
 sendinvitation.subject=PowerFolder '{0}' \u7684\u9080\u8bf7
 sendinvitation.toclipboard=\u5230\u526a\u8d34\u677f\u2026\u2026
@@ -1065,6 +1089,7 @@ wizard.basicsetup.private=\u5c40\u57df\u7f51\u548c\u4e92\u8054\u7f51
 wizard.basicsetup.title=\u57fa\u672c\u8bbe\u7f6e
 wizard.basicsetup.upload.text=\u65e0\u9650\u5236\u8fde\u63a5\u5c06\u5141\u8bb8\u65e0\u9650\u91cf\u7684\u8fde\u63a5\u6570\u3002
 wizard.basicsetup.upload.title=\u65e0\u9650\u5236\u8fde\u63a5
+##wizard.choose_location.select=Please select the directory
 wizard.choosedisklocation.select=\u9009\u62e9\u76ee\u5f55
 wizard.choosedisklocation.title=\u78c1\u76d8\u4f4d\u7f6e
 wizard.control.back=< \u8fd4\u56de
@@ -1077,8 +1102,13 @@ wizard.control.help=\u5e2e\u52a9
 wizard.control.help.description=\u663e\u793a\u5728\u7ebf\u5e2e\u52a9 (Alt-8)
 wizard.control.next=\u4e0b\u4e00\u6b65 >
 wizard.control.next.description=\u5230\u5411\u5bfc\u7684\u4e0b\u4e00\u6b65
+##wizard.create_folder.failed=Failed to create PowerFolder.
+##wizard.create_folder.title=Creating PowerFolder
+##wizard.create_folder.working=Creating PowerFolder, please wait.
 wizard.description=\u5411\u5bfc
 wizard.filesharing.sharedsuccess=\u5df2\u7ecf\u6210\u529f\u5171\u4eab\u65b0\u6587\u4ef6\u5939\uff01\r\n\u73b0\u5728\u53ef\u4ee5\u52a0\u5165\u5176\u4ed6\u7528\u6237
+##wizard.folder_invitation.intro=You have received an invitation from {0}
+##wizard.folder_invitation.title=Folder Invitation
 wizard.host_panel.folder_host_success=\u4f60\u5df2\u7ecf\u6210\u529f\u8bbe\u7f6e\u4e00\u4e2a\u4e3b\u6587\u4ef6\u5939\uff01\n
 wizard.host_panel.pcsjoin=\u5176\u5b83\u8ba1\u7b97\u673a\u73b0\u5728\u53ef\u4ee5\u52a0\u5165\u8fd9\u4e2a\u6587\u4ef6\u5939
 wizard.host_panel.select=\u8bf7\u9009\u62e9\u4f5c\u4e3a\u4e3b\u6587\u4ef6\u5939\u7684\u76ee\u5f55
@@ -1100,14 +1130,16 @@ wizard.send_invitations.invitation_text=\u8f93\u5165\u4e00\u6761\u6d88\u606f\u7e
 wizard.send_invitations.invitation_text_sample=
 wizard.send_invitations.join=\u52a0\u5165\u6587\u4ef6\u5939\u9700\u8981\u9080\u8bf7\u6587\u4ef6
 wizard.send_invitations.never_untrusted=\u4ece\u4e0d\u7ed9\u4e0d\u4fe1\u4efb\u7684\u4eba\u53d1\u9001\u9080\u8bf7
-wizard.sendinvitations.offline=\u672a\u8fde\u63a5
 wizard.send_invitations.over_powerfolder=\u9a6c\u4e0a\u4f7f\u7528PowerFolder
 wizard.send_invitations.save_to_file=\u53e6\u5b58\u4e3a\u6587\u4ef6
 wizard.send_invitations.send_by_mail=\u901a\u8fc7\u90ae\u4ef6\u53d1\u9001
 wizard.send_invitations.send_invitation=\u53d1\u9001\u9080\u8bf7
+wizard.send_invitations.title=\u4fdd\u5b58\u9080\u8bf7
+wizard.sendinvitations.offline=\u672a\u8fde\u63a5
 wizard.sendinvitations.sendsuccess=\u9080\u8bf7\u53d1\u9001\u6210\u529f
 wizard.sendinvitations.sendsuccessinfo=\u60a8\u5df2\u7ecf\u6210\u529f\u53d1\u9001\u9080\u8bf7\u3002
-wizard.send_invitations.title=\u4fdd\u5b58\u9080\u8bf7
+##wizard.setup_folder.sendinvitation=Send invitations afterwards
+##wizard.setup_folder.title=Create Folder
 wizard.setupdns.dyndnshomepage=\u52a8\u6001DNS\u4e3b\u9875
 wizard.setupdns.enterdns=\u8f93\u5165\u4f60\u7684\u52a8\u6001DNS
 wizard.setupdns.improvesread=\u8fd9\u4f1a\u6539\u5584\u4f60\u7684\u8fde\u63a5\u6027\u80fd\u3002\u4f46\u5e76\u4e0d\u662f\u5fc5\u9700\u7684\u3002
