--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -78,6 +78,7 @@ addressEditor.title=IP \u7bc4\u56f2
 
 apps.dir.firefox=Firefox
 apps.dir.outlook=Outlook
+##apps.dir.sunbird=Sunbird
 apps.dir.thunderbird=Thunderbird
 
 buypro.description=\u4eca\u3059\u3050 PowerFolder Pro \u306b\u30a2\u30c3\u30d7\u30b0\u30ec\u30fc\u30c9
@@ -101,10 +102,6 @@ chatpanel.member_left_folder_at_time={1} {0} \u304c\u30d5\u30a9\u30eb\u30c0\u309
 clearcompleteddownloads.description=\u6700\u8fd1\u5b8c\u4e86\u3057\u305f\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u306e\u30ea\u30b9\u30c8\u3092\u6d88\u53bb (Alt-3)
 clearcompleteddownloads.key=C
 clearcompleteddownloads.name=\u5b8c\u4e86\u306e\u6d88\u53bb(C)
-
-clearrecentdownloads.description=\u6700\u8fd1\u767a\u751f\u3057\u305f\u554f\u984c\u306e\u30ea\u30b9\u30c8\u3092\u6d88\u53bb
-clearrecentdownloads.key=C
-clearrecentdownloads.name=\u6d88\u53bb(C)
 
 connect.description=PowerFolder \u30e6\u30fc\u30b6\u30fc\u3078\u306e\u624b\u52d5\u63a5\u7d9a
 connect.dialog.text=\u63a5\u7d9a\u3057\u305f\u3044\u30e6\u30fc\u30b6\u30fc\u306e\u30db\u30b9\u30c8\u540d\u307e\u305f\u306f IP \u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002\n\nPowerFolder \u306f\u81ea\u52d5\u7684\u306b\u77ed\u6642\u9593\u3067\u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u3078\u63a5\u7d9a\u3057\u307e\u3059\u304c\u3001\n\u30e6\u30fc\u30b6\u30fc\u306b\u624b\u52d5\u3067\u63a5\u7d9a\u3057\u305f\u3044\u5834\u5408\u306f\u3053\u306e\u30aa\u30d7\u30b7\u30e7\u30f3\u3092\u4f7f\u7528\u3057\u3066\u304f\u3060\u3055\u3044\u3002\n 
@@ -295,6 +292,19 @@ folder.members.synchronisation_panel.folder_size=\u30d5\u30a9\u30eb\u30c0\u30b5\
 folder.members.synchronisation_panel.local_size=\u30ed\u30fc\u30ab\u30eb\u30b5\u30a4\u30ba
 folder.members.synchronisation_panel.title=\u30e1\u30f3\u30d0\u30fc\u306e\u540c\u671f\u72b6\u614b
 
+folder_create.progress.text='{0}' \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u4f5c\u6210\u4e2d 
+
+##folder_leave.button.key=L
+##folder_leave.button.name=Leave
+folder_leave.description=\u3053\u306e\u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u3092\u9000\u907f
+folder_leave.dialog.delete=\u30e1\u30bf\u30c7\u30fc\u30bf\u306e\u524a\u9664
+##folder_leave.dialog.preview=Convert to preview
+folder_leave.dialog.sync_warning=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306f\u73fe\u5728\u540c\u671f\u4e2d\u3067\u3059\uff01
+folder_leave.dialog.text={0} \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u3092\u9000\u907f\uff1f
+folder_leave.dialog.title={0} \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u3092\u9000\u907f\uff1f
+folder_leave.key=L
+folder_leave.name=\u30d5\u30a9\u30eb\u30c0\u9000\u907f(L)
+
 foldercreate.description=\u65b0\u3057\u3044\u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u3092\u4f5c\u6210
 foldercreate.dialog.backupbyonlinestorage=\u30aa\u30f3\u30e9\u30a4\u30f3\u30b9\u30c8\u30ec\u30fc\u30b8\u306b\u3088\u308b\u30d0\u30c3\u30af\u30a2\u30c3\u30d7
 foldercreate.dialog.backuperror.text=\u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u3092\u30d0\u30c3\u30af\u30a2\u30c3\u30d7\u3059\u308b\u30aa\u30f3\u30e9\u30a4\u30f3\u30b9\u30c8\u30ec\u30fc\u30b8\u306e\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u304c\u3067\u304d\u307e\u305b\u3093\u3002
@@ -314,7 +324,6 @@ foldercreate.key=S
 foldercreate.name=\u65b0\u898f\u30d5\u30a9\u30eb\u30c0(S)
 foldercreate.nameempty.text=\u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u306e\u540d\u524d\u3092\u7a7a\u6b04\u306b\u3059\u308b\u3053\u3068\u306f\u3067\u304d\u307e\u305b\u3093
 foldercreate.nameempty.title=\u540d\u524d\u304c\u5fc5\u8981
-folder_create.progress.text='{0}' \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u4f5c\u6210\u4e2d 
 foldercreate.success={0} \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u306e\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u6210\u529f\u3002\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u5148 '{1}'
 
 folderexception.dialog.text='{0}' \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u3078\u306e\u53c2\u52a0\u4e0d\u53ef\u3002\n\u7406\u7531\: {1}
@@ -340,14 +349,6 @@ folderjoin.preview.key=P
 folderjoin.secret=\u30b7\u30fc\u30af\u30ec\u30c3\u30c8
 folderjoin.warning.notempty.text=\u30d5\u30a9\u30eb\u30c0 '{0}' \u306e\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u304c\u3042\u308b\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u306f\u7a7a\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u3002\n\u305d\u306e\u5834\u6240\u306e\u3059\u3079\u3066\u306e\u30d5\u30a1\u30a4\u30eb\u306f\u30d5\u30a9\u30eb\u30c0\u306e\u30e1\u30f3\u30d0\u30fc\u306b\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3055\u308c\u307e\u3059\u3002\n\u672c\u5f53\u306b\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306e\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u3092\u4ee5\u4e0b\u306e\u5834\u6240\u306b\u4fdd\u5b58\u3057\u307e\u3059\u304b\uff1f\n'{1}'
 folderjoin.warning.notempty.title=\u7a7a\u3067\u306f\u306a\u3044\u30ed\u30fc\u30ab\u30eb\u306e\u57fa\u672c\u30c7\u30a3\u30ec\u30af\u30c8\u30ea
-
-folder_leave.description=\u3053\u306e\u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u3092\u9000\u907f
-folder_leave.dialog.delete=\u30e1\u30bf\u30c7\u30fc\u30bf\u306e\u524a\u9664
-folder_leave.dialog.sync_warning=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306f\u73fe\u5728\u540c\u671f\u4e2d\u3067\u3059\uff01
-folder_leave.dialog.text={0} \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u3092\u9000\u907f\uff1f
-folder_leave.dialog.title={0} \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u3092\u9000\u907f\uff1f
-folder_leave.key=L
-folder_leave.name=\u30d5\u30a9\u30eb\u30c0\u9000\u907f(L)
 
 foldermove.progress.text='{0}' \u30d5\u30a9\u30eb\u30c0\u79fb\u52d5\u4e2d
 foldermove.progress.title=\u30d5\u30a9\u30eb\u30c0\u79fb\u52d5
@@ -469,11 +470,14 @@ general.help=\u30d8\u30eb\u30d7
 general.hide=\u96a0\u3059
 general.hours=\u6642\u9593
 general.inet=i-net
+##general.invitor=Invitor
+##general.lan_only=LAN only
 general.local_copy_at=\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u306e\u5834\u6240
 general.localcopyplace=\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u306e\u5834\u6240\u306e\u9078\u629e
 general.localized_date_format=yyyy MMMM dd.
 general.localnet=\u30ed\u30fc\u30ab\u30eb
 general.member=\u30e1\u30f3\u30d0\u30fc
+##general.message=Message
 general.minutes=\u5206
 general.monday=\u6708\u66dc\u65e5
 general.neverAskAgain=\u4eca\u5f8c\u3053\u306e\u8cea\u554f\u3092\u3057\u306a\u3044
@@ -485,6 +489,7 @@ general.ok.key=O
 general.overwrite=\u4e0a\u66f8\u304d
 general.overwrite_all=\u3059\u3079\u3066\u4e0a\u66f8\u304d
 general.powerfolder=PowerFolder
+##general.preview_folder=Preview folder
 general.recyclebin=\u3054\u307f\u7bb1 
 general.reject=\u62d2\u5426
 general.saturday=\u571f\u66dc\u65e5
@@ -757,6 +762,7 @@ preferences.dialog.statusWaitDynDns=\u5c11\u3005\u304a\u5f85\u3061\u304f\u3060\u
 preferences.dialog.title=\u8a2d\u5b9a
 preferences.dialog.titleProcessing=\u51e6\u7406\u4e2d...
 preferences.dialog.use.relayed.connections=\u63a5\u7d9a\u6027\u5411\u4e0a\u306e\u305f\u3081\u4e2d\u7d99\u63a5\u7d9a\u3092\u4f7f\u7528
+##preferences.dialog.use.udt.connections=Use NAT traversal to improve connectivity
 preferences.dialog.use_pf_icon=Windows \u3067 PowerFolder \u30a2\u30a4\u30b3\u30f3\u3092\u4f7f\u7528
 preferences.dialog.usedeltaonlan=LAN\u5185\u3067\u30c7\u30eb\u30bf\u540c\u671f\u3092\u4f7f\u7528
 preferences.dialog.usedeltaonlan.tooltip=\u4f4e\u901f\u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u306e\u5834\u5408\u306b\u6709\u52b9\u306b\uff08CPU \u306e\u8ca0\u8377\u306b\u5f71\u97ff\u304c\u51fa\u308b\u53ef\u80fd\u6027\u3042\u308a\uff09
@@ -770,6 +776,13 @@ preferences.dialog.xbehavior.exit=\u30d7\u30ed\u30b0\u30e9\u30e0\u3092\u7d42\u4e
 preferences.dialog.xbehavior.minimize=\u30b7\u30b9\u30c6\u30e0\u30c8\u30ec\u30a4\u306b\u6700\u5c0f\u5316
 preferences.key=P
 preferences.name=\u8a2d\u5b9a(P)
+
+##preview_folder_remove.description=Remove this PowerFolder preview
+##preview_folder_remove.dialog.delete=Delete meta-data
+##preview_folder_remove.dialog.text=Remove PowerFolder {0}?
+##preview_folder_remove.dialog.title=Remove PowerFolder {0}?
+##preview_folder_remove.key=R
+##preview_folder_remove.name=Remove Folder
 
 previewfiles.description=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u5185\u306e\u30d5\u30a1\u30a4\u30eb\u3092\u8868\u793a
 previewfiles.key=P
@@ -820,6 +833,7 @@ quickinfo.folder.downloads_recently_completed=\u6700\u8fd1\u5b8c\u4e86\u3057\u30
 quickinfo.folder.is_in_sync=\u30d5\u30a9\u30eb\u30c0\u540c\u671f\u6e08\u307f
 quickinfo.folder.is_synchronizing=\u30d5\u30a9\u30eb\u30c0\u540c\u671f\u4e2d...
 quickinfo.folder.number_of_files_and_size={0} \u30d5\u30a1\u30a4\u30eb\u3001 {1}
+##quickinfo.folder.preview=Preview - No synchronization
 quickinfo.folder.status_of_folder={0} \u306e\u72b6\u614b
 quickinfo.friends.online=\u53cb\u4eba {1} \u4eba\u4e2d {0} \u4eba\u304c\u30aa\u30f3\u30e9\u30a4\u30f3
 quickinfo.friends.title=\u53cb\u4eba\u306e\u691c\u7d22
@@ -829,6 +843,7 @@ quickinfo.myfolders.insyncall=\u5168\u30d5\u30a9\u30eb\u30c0\u540c\u671f\u6e08\u
 quickinfo.myfolders.syncing={0} \u540c\u671f\u4e2d
 quickinfo.myfolders.title=\u30de\u30a4 \u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u306e\u72b6\u614b
 quickinfo.previewfolders.folders={1} \u30d5\u30a9\u30eb\u30c0\u306b {0} 
+##quickinfo.previewfolders.nosync=Preview folders are not synchronized
 quickinfo.previewfolders.title=\u30d7\u30ec\u30d3\u30e5\u30fc\u30d5\u30a9\u30eb\u30c0\u306e\u72b6\u614b
 quickinfo.recylcebin.files=\u3054\u307f\u7bb1\u5185\u306e\u30d5\u30a1\u30a4\u30eb {0}
 quickinfo.recylcebin.title=\u3054\u307f\u7bb1
@@ -861,6 +876,10 @@ recyclebin.confirmation.overwrite.on.restore.size.bytes=\u30b5\u30a4\u30ba {0}
 recyclebin.confirmation.overwrite.on.restore.title=\u30d5\u30a1\u30a4\u30eb\u5fa9\u5143\u3001\u4e0a\u66f8\u304d\u3057\u307e\u3059\u304b\uff1f
 recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=\u3054\u307f\u7bb1\u306e\u30d5\u30a1\u30a4\u30eb\u306b\u3088\u3063\u3066\uff1f
 
+##remove_all_preview_folders.description=Removes all preview PowerFolders
+##remove_all_preview_folders.key=A
+##remove_all_preview_folders.name=Remove All Folders
+
 remove_from_recycle_bin.description=PowerFolder \u3054\u307f\u7bb1\u304b\u3089\u30d5\u30a1\u30a4\u30eb\u3092\u524a\u9664
 remove_from_recycle_bin.key=D
 remove_from_recycle_bin.name=\u30d5\u30a1\u30a4\u30eb\u524a\u9664(D)
@@ -872,6 +891,10 @@ remove_pattern.dont=\u524a\u9664\u3057\u306a\u3044
 remove_pattern.prompt='{0}' \u30d1\u30bf\u30fc\u30f3\u306f\u524a\u9664\u3055\u308c\u307e\u3059\u3002
 remove_pattern.remove=\u524a\u9664
 remove_pattern.title=\u7121\u8996\u30d1\u30bf\u30fc\u30f3\u3092\u524a\u9664
+
+##remove_previews_action.remove=Remove
+##remove_previews_action.text=Do you want to remove all preview folders?
+##remove_previews_action.title=Remove all preview folders
 
 removefriend.description=\u30e6\u30fc\u30b6\u30fc\u3092\u53cb\u4eba\u30ea\u30b9\u30c8\u304b\u3089\u524a\u9664
 removefriend.key=R
@@ -911,6 +934,10 @@ searchfriends.description=\u53cb\u4eba\u306e\u691c\u7d22
 searchfriends.key=S
 searchfriends.name=\u691c\u7d22(S)
 
+send_invitation.example_email_address=email@domain.com
+send_invitation.multi_users=\u8907\u6570\u9078\u629e\u30e6\u30fc\u30b6\u30fc
+send_invitation.no_users=\u9078\u629e\u30e6\u30fc\u30b6\u30fc\u306a\u3057
+
 sendinvitation.allFolders.text={0} \u306f\u3069\u306e\u30d5\u30a9\u30eb\u30c0\u306b\u3082\u53c2\u52a0\u3055\u305b\u308b\u3053\u3068\u306f\u3067\u304d\u307e\u305b\u3093\u3002\n\u30e6\u30fc\u30b6\u30fc\u306f\u3042\u306a\u305f\u306e\u5168\u30d5\u30a9\u30eb\u30c0\u306b\u53c2\u52a0\u6e08\u307f\u3067\u3059\u3002
 sendinvitation.allFolders.title={0} \u306f\u3059\u3067\u306b\u5168\u30d5\u30a9\u30eb\u30c0\u306b\u53c2\u52a0
 sendinvitation.ask_emailaddres.message=\u62db\u5f85\u72b6\u9001\u4ed8\u5148\u306e\u96fb\u5b50\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9
@@ -918,13 +945,10 @@ sendinvitation.ask_emailaddres.title=\u96fb\u5b50\u30e1\u30fc\u30eb \u30a2\u30c9
 sendinvitation.body=\u3053\u3093\u306b\u3061\u306f {0} \u3055\u3093\u3002<br><br>{1} \u3055\u3093\u304c PowerFolder \u306e '{2}' \u30d5\u30a9\u30eb\u30c0\u306b\u3042\u306a\u305f\u3092\u62db\u5f85\u3057\u307e\u3059\u3002<br>\u3053\u306e\u62db\u5f85\u72b6\u306f\u3001{1} \u3055\u3093\u304c\u30db\u30b9\u30c8\u3057\u3066\u3044\u308b\u30d7\u30e9\u30a4\u30d9\u30fc\u30c8\u30d5\u30a9\u30eb\u30c0\u306b\u30a2\u30af\u30bb\u30b9\u3059\u308b\u305f\u3081\u306b\u4f7f\u7528\u3055\u308c\u307e\u3059\u3002<br><br>1) \u5171\u6709\u30d5\u30a1\u30a4\u30eb\u306b\u30a2\u30af\u30bb\u30b9\u3059\u308b\u306b\u306f\u3001\u307e\u305a http\://www.powerfolder.com \u304b\u3089\u7121\u6599\u30bd\u30d5\u30c8\u30a6\u30a7\u30a2<br>PowerFolder \u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3057\u3066\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u3057\u3066\u304f\u3060\u3055\u3044\u3002<br><br>2) PowerFolder \u3092\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u3057\u305f\u5f8c\u3001\u30e1\u30fc\u30eb\u306b\u6dfb\u4ed8\u3055\u308c\u3066\u3044\u308b\u62db\u5f85\u72b6(.invitation)\u30d5\u30a1\u30a4\u30eb\u3092\u30c0\u30d6\u30eb\u30af\u30ea\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002<br><br>PowerFolder \u306e\u30a4\u30f3\u30b9\u30c8\u30fc\u30eb\u3084\u4f7f\u3044\u65b9\u3001\u305d\u306e\u4ed6\u8a73\u7d30\u306b\u3064\u3044\u3066\u306f\u3001<br>\u79c1\u3069\u3082\u306e\u30b5\u30a4\u30c8 http\://docs.powerfolder.com \u3067\u63b2\u8f09\u3057\u3066\u3044\u308b\u8aac\u660e\u6587\u66f8\u3092\u3054\u89a7\u304f\u3060\u3055\u3044\u3002<br><br>\u3088\u308d\u3057\u304f\u304a\u9858\u3044\u3044\u305f\u3057\u307e\u3059\u3002<br>PowerFolder \u958b\u767a\u30c1\u30fc\u30e0<br>PowerFolder \u30d7\u30ed\u30d5\u30a7\u30c3\u30b7\u30e7\u30ca\u30eb\u30fb\u30d5\u30a9\u30eb\u30c0\u5171\u6709\u30c4\u30fc\u30eb<br>
 sendinvitation.description=\u30e6\u30fc\u30b6\u30fc\u3092\u30d5\u30a9\u30eb\u30c0\u306b\u62db\u5f85
 sendinvitation.email=\u96fb\u5b50\u30e1\u30fc\u30eb\u3078...
-send_invitation.example_email_address=email@domain.com
 sendinvitation.folder.text=\u62db\u5f85\u72b6\u9001\u4ed8\u5148\uff1a
 sendinvitation.folder.title=\u62db\u5f85\u72b6\u306e\u9001\u4ed8
 sendinvitation.key=I
-send_invitation.multi_users=\u8907\u6570\u9078\u629e\u30e6\u30fc\u30b6\u30fc
 sendinvitation.name=\u62db\u5f85\u72b6\u306e\u9001\u4ed8(I)
-send_invitation.no_users=\u9078\u629e\u30e6\u30fc\u30b6\u30fc\u306a\u3057
 sendinvitation.placetostore=\u62db\u5f85\u72b6\u3092\u4fdd\u5b58\u3059\u308b\u5834\u6240\u306e\u9078\u629e
 sendinvitation.subject=PowerFolder \u306e '{0}' \u30d5\u30a9\u30eb\u30c0\u3078\u306e\u62db\u5f85
 sendinvitation.toclipboard=\u30af\u30ea\u30c3\u30d7\u30dc\u30fc\u30c9\u3078...
@@ -1065,6 +1089,7 @@ wizard.basicsetup.private=LAN \u3068\u30a4\u30f3\u30bf\u30fc\u30cd\u30c3\u30c8
 wizard.basicsetup.title=\u57fa\u672c\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7
 wizard.basicsetup.upload.text=\u63a5\u7d9a\u901f\u5ea6\u3092\u7121\u5236\u9650\u306b\u3057\u305f\u5834\u5408\u3001\u63a5\u7d9a\u6570\u306e\u5236\u9650\u3082\u306a\u304f\u306a\u308a\u307e\u3059\u3002
 wizard.basicsetup.upload.title=\u7121\u5236\u9650\u306e\u63a5\u7d9a\u901f\u5ea6
+##wizard.choose_location.select=Please select the directory
 wizard.choosedisklocation.select=\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u306e\u9078\u629e
 wizard.choosedisklocation.title=\u30c7\u30a3\u30b9\u30af\u5185\u306e\u5834\u6240
 wizard.control.back=< \u623b\u308b
@@ -1077,8 +1102,13 @@ wizard.control.help=\u30d8\u30eb\u30d7
 wizard.control.help.description=\u30aa\u30f3\u30e9\u30a4\u30f3\u30d8\u30eb\u30d7\u3092\u8868\u793a (Alt-8)
 wizard.control.next=\u6b21\u3078 >
 wizard.control.next.description=\u6b21\u306e\u6bb5\u968e\u306b\u9032\u3080
+##wizard.create_folder.failed=Failed to create PowerFolder.
+##wizard.create_folder.title=Creating PowerFolder
+##wizard.create_folder.working=Creating PowerFolder, please wait.
 wizard.description=\u30a6\u30a3\u30b6\u30fc\u30c9\u3092\u958b\u304f
 wizard.filesharing.sharedsuccess=\u65b0\u898f\u30d5\u30a9\u30eb\u30c0\u306e\u5171\u6709\u306b\u6210\u529f\u3057\u307e\u3057\u305f\uff01\n\u4ed6\u30e6\u30fc\u30b6\u30fc\u306e\u53c2\u52a0\u304c\u53ef\u80fd\u306b\u306a\u308a\u307e\u3057\u305f\u3002
+##wizard.folder_invitation.intro=You have received an invitation from {0}
+##wizard.folder_invitation.title=Folder Invitation
 wizard.host_panel.folder_host_success=\u30db\u30b9\u30c8\u30fb\u30d5\u30a9\u30eb\u30c0\u306e\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u306b\u6210\u529f\u3057\u307e\u3057\u305f\uff01\n
 wizard.host_panel.pcsjoin=\u4ed6\u306e\u30b3\u30f3\u30d4\u30e5\u30fc\u30bf\u304c\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306b\u53c2\u52a0\u3067\u304d\u308b\u3088\u3046\u306b\u306a\u308a\u307e\u3057\u305f
 wizard.host_panel.select=\u30db\u30b9\u30c8\u306b\u3059\u308b\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044
@@ -1097,17 +1127,19 @@ wizard.projectname.choose=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u540d\u306e\u9078
 wizard.projectname.entername=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u540d\u524d\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 wizard.projectname.title=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u540d\u306e\u9078\u629e
 wizard.send_invitations.invitation_text=\u53d7\u3051\u53d6\u308a\u4eba\u3078\u306e\u30e1\u30c3\u30bb\u30fc\u30b8\u306e\u5165\u529b
-##wizard.sendinvitations.invitationtextsample=
+##wizard.send_invitations.invitation_text_sample=
 wizard.send_invitations.join=\u62db\u5f85\u72b6\u30d5\u30a1\u30a4\u30eb\u306f\u30d5\u30a9\u30eb\u30c0\u3078\u306e\u53c2\u52a0\u306b\u5fc5\u8981\u3067\u3059\u3002
 wizard.send_invitations.never_untrusted=\u4fe1\u983c\u3067\u304d\u306a\u3044\u4eba\u306b\u306f\u6c7a\u3057\u3066\u62db\u5f85\u72b6\u3092\u6e21\u3055\u306a\u3044\u3067\u304f\u3060\u3055\u3044\u3002
-wizard.sendinvitations.offline=\u672a\u63a5\u7d9a
 wizard.send_invitations.over_powerfolder=PowerFolder \u3092\u901a\u3058\u3066\u76f4\u3061\u306b
 wizard.send_invitations.save_to_file=\u540d\u524d\u3092\u4ed8\u3051\u3066\u4fdd\u5b58
 wizard.send_invitations.send_by_mail=\u30e1\u30fc\u30eb\u3067\u9001\u308b
 wizard.send_invitations.send_invitation=\u62db\u5f85\u72b6\u306e\u9001\u4ed8
+wizard.send_invitations.title=\u62db\u5f85\u72b6\u306e\u4fdd\u5b58
+wizard.sendinvitations.offline=\u672a\u63a5\u7d9a
 wizard.sendinvitations.sendsuccess=\u62db\u5f85\u72b6\u306e\u9001\u4ed8\u5b8c\u4e86
 wizard.sendinvitations.sendsuccessinfo=\u62db\u5f85\u72b6\u306e\u9001\u4ed8\u306b\u6210\u529f\u3057\u307e\u3057\u305f\u3002
-wizard.send_invitations.title=\u62db\u5f85\u72b6\u306e\u4fdd\u5b58
+##wizard.setup_folder.sendinvitation=Send invitations afterwards
+##wizard.setup_folder.title=Create Folder
 wizard.setupdns.dyndnshomepage=DynDns \u30db\u30fc\u30e0\u30da\u30fc\u30b8
 wizard.setupdns.enterdns=\u3042\u306a\u305f\u306e\uff08\u52d5\u7684\uff09DNS \u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 wizard.setupdns.improvesread=\u5fc5\u9808\u5165\u529b\u9805\u76ee\u3067\u306f\u3042\u308a\u307e\u305b\u3093\u304c\u3001\u5916\u90e8\u304b\u3089\u306e\u53c2\u7167\u6027\u304c\u5411\u4e0a\u3057\u307e\u3059\u3002
